--- a/ᏧᎦᎾᏮ_ᎠᎹᏰᏟ.mw
+++ b/ᏧᎦᎾᏮ_ᎠᎹᏰᏟ.mw
@@ -88,7 +88,7 @@
 [[Image:Indios2-19042007.jpg|thumb|right|200px|ᏔᎵ ᎡᎯᏯᎢ ᎠᏂᎦᏯ, ᏆᏏᎵᎢ ]]
 [[File:Indios da tribo Tucuxi participam do Fórum Social Mundial 1006 FP6469.jpg|thumb|right|200px||ᏆᏏᎵᎢ ᎡᎯᏯᎢ [[family|ᏚᏓᏘᏳᎥᎢ]]]]
 <div style="font-size:100%;-moz-column-count:2; column-count:2;">
-<--This list is incomplete -->
+<!--This list is incomplete -->
 *[[Alacalufe]], Chile
 * [[Amanyé]], ᏆᏏᎵᎢ
 *[[Arawaks]], Colombia, [[French Guiana|ᎦᎸᏥ ᎦᎢᏯᏂ]], [[Guyana|ᎫᏯᎾ]], Suriname, Venezuela
@@ -173,7 +173,6 @@
 * [[Zuruaha]], ᏆᏏᎵᎢ
 * [[Zemborya]], ᏆᏏᎵᎢ
 </div>
-
 
 ==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
 *[[ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ]]
