--- a/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
+++ b/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
@@ -52,7 +52,7 @@
 #[[Oklahoma|ᎣᎦᎳᎰᎹ]], ᏅᏓᏕᏆ 16, 1907
 #[[New Mexico|ᏍᏆᏂᏤᏍᏛᎢ]], ᎤᏃᎸᏔᎾ 6, 1912
 #[[Arizona|ᎡᏩᏐᎾ]], ᎥᏍᎩᏱ 14, 1912
-#[[Alaska|ᎠᎳᏍᎦ]], ᎤᏃᎸᏔᎾ 3, 1959
+#[[Alaska|ᎠᎳᏍᎧ]], ᎤᏃᎸᏔᎾ 3, 1959
 #[[Hawaii|ᎭᏩᎢ]], ᎦᎶᏂ 21, 1959<ref>[http://www.50states.com/statehood.htm "Statehood Dates."] ''50 ᎧᏃᎮᎭ.'' (retrieved 27 ᏚᎵᏍᏗ 2010)</ref>
 
 ==ᏓᏓᏚᎬ ᎪᏪᎵ==
