/* ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ */ +brackets

--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -197,7 +197,7 @@ Joe Byrd ᏥᏄᏍᏛᎩ ᎯᎠ [[ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ  ᎯᎠ 
 {{commons|Cherokee}}
 *[http://www.cherokee.org ᏣᎳᎩᎯ ᎠᏰᎵ]
 *[http://www.unitedkeetoowahband.org/ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]]]
-*[http://www.cherokee-nc.com/ [[Eastern Band Cherokee Nation|ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᏣᎳᎩᎯ ᎠᏰᎵ]
+*[http://www.cherokee-nc.com/ [[Eastern Band Cherokee Nation|ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᏣᎳᎩᎯ ᎠᏰᎵ]]]
 *[http://fax.libs.uga.edu/J84xSIx2x1xv19a/ Annual report of the Bureau of Ethnology to the Secretary of the Smithsonian Institution (1897/98: pt.1)], ᎢᎦᎢ ᎨᏐ ᎯᎠ ᎢᏰᎵᏍᏗᎢ ᎯᎠ ᏣᎳᎩ, ᎾᎥᎢ James Mooney
 *[http://www.georgiaencyclopedia.org/nge/Article.jsp?id=h-2722 New [[Georgia|ᏣᏥᏱ]] Encyclopedia]
 
