--- a/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
+++ b/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
@@ -53,10 +53,11 @@
 #[[New Mexico|ᏍᏆᏂᏤᏍᏛᎢ]], ᎤᏃᎸᏔᎾ 6, 1912
 #[[Arizona|ᎡᏩᏐᎾ]], ᎥᏍᎩᏱ 14, 1912
 #[[Alaska|ᎠᎳᏍᎦ]], ᎤᏃᎸᏔᎾ 3, 1959
-#[[Hawaii|ᎭᏩᏱ]], ᎦᎶᏂ 21, 1959<ref>[http://www.50states.com/statehood.htm "Statehood Dates."] ''50 ᎧᏃᎮᎭ.'' (retrieved 27 ᏚᎵᏍᏗ 2010)</ref>
+#[[Hawaii|ᎭᏩᏱ]], ᎦᎶᏂ 21, 1959<ref>[http://www.50states.com/statehood.htm "Statehood Dates."] ''50 ᎧᏃᎮᎭ.'' (retrieved 27 ᏚᎵᏍᏗ 2010)</ref><ref>Cherokee Nation Cultural Resource Center
+Language Services. 2010.</ref>
 
 ==ᏓᏓᏚᎬ ᎪᏪᎵ==
-<references/>
+{{reflist}}
 
 ==ᏫᏓᏎᏄᎢ==
 *Feeling, Durban. ''ᏣᎳᎩ-ᏲᏁᎦ ᏗᏕᏠᏆᏍᏙᏗ.'' ᏓᎵᏆ, ᎣᎦᎳᎰᎹ: ᏣᎳᎩᎯ ᎠᏰᎵ, 1975.
