--- a/ᎠᏕᎸ_ᏓᎶᏂᎨ.mw
+++ b/ᎠᏕᎸ_ᏓᎶᏂᎨ.mw
@@ -1,6 +1,6 @@
 '''ᎠᏕᎸ ᏓᎶᏂᎨ''' (ᎾᏍᎦ ᎾᏍᏇ '''ᎠᏕᎳ ᏓᎶᏂᎨ''') ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᎤᏯᎸᎩ ᎤᎶᏐᏅ [[precious metal|ᎦᎸᏉᏗ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ]] Ꮎ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ centuries ᎤᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ [[money|ᎠᏕᎳ]], [[store of value|ᎠᏓᎾᏅ ᏧᎬᏩᎶᏗ]] ᎠᎴ ᎭᏫᎾᏗᏢ [[jewelery|ᎠᏣᏅᏙ]]. ᎯᎠ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏄᎵᏍᏔᏅ ᏥᏄᏍᏗ [[gold nugget|ᎤᏝᏅᎯ]] ᎠᎴ ᎤᏛᏒ ᎤᎦᏔ ᎭᏫᎾᏗᏢ ᎯᎸᏍᎩ ᏅᏯ ᎠᎴ ᎭᏫᎾᏗᏢ [[alluvial deposit|ᎤᏩᎾᏕᏍᎩ ᏓᏍᏆᏂᎪᏛ]]ᎠᎴ ᎨᏒᎢ ᏌᏊ ᎯᎠ [[coinage metal|ᎠᏛᎯᏍᏙᏗ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ]]. ᎾᏍᎩ ᎨᏒᎢ ᏩᏂᎨᎢ, ᎠᏨᏍᏛ, ᏓᎶᏂᎨ, ᎠᏫᏒᏗ, ᎦᏓᏆᎵ, ᎠᎴ ᎦᏓᏆᎵ (trivalent ᎠᎴ univalent) [[transition metal|ᎠᎦᏲᎳᏗᏍᏗ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ]]. ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏠᏯᏍᏛ [[dentistry|ᎠᏅᏬᏗ]] ᎠᎴ [[electronics]]. ᎠᏕᎸ ᏓᎶᏂᎨ ᏚᏙᏢᏒ ᎯᎠ ᎠᎴᏅᏙᏗ ᎾᏍᎩᎾᎢ [[Gold standard|ᎠᏕᎳ ᏰᎵᏊ ᏗᏙᎳᎩ]] ᎬᏔᏅᎯ ᎾᎥᎢ ᎯᎠ [[International Monetary Fund|ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎠᏕᎳ ᎠᏰᎵ ᎠᎲ]] (IMF) ᎠᎴ ᎯᎠ [[Bank for International Settlements|ᎠᏕᎸ ᏗᏗ ᎾᏍᎩᎾᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏗᏓᏙᎳᏤᎸ]] (ᏗᏍᏆᎸᏙᏗ). Ꮝ [[ISO 4217|ISO ᏕᎦᏃᏣᎸ ᎠᏍᏓᏩᏛᏍᏙᏗ]] ᎨᏒᎢ '''XAU'''.
 
-ᎠᏕᎸ ᏓᎶᏂᎨ ᎨᏒᎢ [[chemical element|chemical ᏑᏓᎴᎩ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[periodic table|ᎠᏍᏆᎵᏍᏗ ᎦᏍᎩᎶ]] ᎬᏙᏗ ᎯᎠ ᏗᎬᏟᎶᏍᏙᏗ '''ᎥᎦᏔᎲᎢ''' (ᏂᏛᎴᏅᏓ ᎯᎠ [[Latin]] ''aurum'') ᎠᎴ [[atomic number|ᎠᏍᏓᏩᏛᏍᏗ ᏎᏍᏗ]] 79. ᎯᎠ ᎦᏟᏐᏗᎩ [[auric]] ᏩᏎᎯᎰᎢ ᎪᎱᏍᏗ ᎪᏢᏅᎯ ᎠᏕᎸ ᏓᎶᏂᎨ. ᎠᏕᎸ ᏓᎶᏂᎨ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎦᏘᎸᏍᏗ ᎬᏙᏗ ᎤᎪᏗᏗ chemicals ᎠᎴ ᎨᏒᎢ attacked ᎾᎥᎢ [[chlorine]], [[fluorine]], [[aqua regia]] ᎠᎴ [[cyanide|ᎠᏍᎩᎾᏗᏍᏗ]] ᎠᎴ ᎠᎧᎵᏏᏐᏗ ᎭᏫᎾᏗᏢ [[mercury (element)|ᏗᎦᏣᏄᎶ ᎤᎾᏣ]]. ᎭᏫᎾᏗᏢ ᎾᏍᎩᎾ, ᎠᏕᎸ ᏓᎶᏂᎨ ᎨᏒᎢ ᏨᏕᎨᏫ ᎭᏫᎾᏗᏢ [[nitric acid|nitric ᏧᏄᏦᏍᏔ]], ᎦᏙ ᎤᏍᏗ ᏫᎵ ᎠᎧᎵᏏᏐᏗ ᎤᎪᏗᏗ ᏐᎢ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ. Nitric ᏧᏄᏦᏍᏔ ᎤᎭ ᎦᏅᎯᏓ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᎦᎫᏍᏛᏗ ᎯᎠ ᎡᏙᎲᎩ ᎠᏕᎸ ᏓᎶᏂᎨ ᎭᏫᎾᏗᏢ ᏫᏚᏳᎪᏛ. 
+ᎠᏕᎸ ᏓᎶᏂᎨ ᎨᏒᎢ [[chemical element|chemical ᏑᏓᎴᎩ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[periodic table|ᎠᏍᏆᎵᏍᏗ ᎦᏍᎩᎶ]] ᎬᏙᏗ ᎯᎠ ᏗᎬᏟᎶᏍᏙᏗ '''ᎥᎦᏔᎲᎢ''' (ᏂᏛᎴᏅᏓ ᎯᎠ [[Latin|ᎳᏗᎾ]] ''aurum'') ᎠᎴ [[atomic number|ᎠᏍᏓᏩᏛᏍᏗ ᏎᏍᏗ]] 79. ᎯᎠ ᎦᏟᏐᏗᎩ [[auric]] ᏩᏎᎯᎰᎢ ᎪᎱᏍᏗ ᎪᏢᏅᎯ ᎠᏕᎸ ᏓᎶᏂᎨ. ᎠᏕᎸ ᏓᎶᏂᎨ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎦᏘᎸᏍᏗ ᎬᏙᏗ ᎤᎪᏗᏗ chemicals ᎠᎴ ᎨᏒᎢ attacked ᎾᎥᎢ [[chlorine]], [[fluorine]], [[aqua regia]] ᎠᎴ [[cyanide|ᎠᏍᎩᎾᏗᏍᏗ]] ᎠᎴ ᎠᎧᎵᏏᏐᏗ ᎭᏫᎾᏗᏢ [[mercury (element)|ᏗᎦᏣᏄᎶ ᎤᎾᏣ]]. ᎭᏫᎾᏗᏢ ᎾᏍᎩᎾ, ᎠᏕᎸ ᏓᎶᏂᎨ ᎨᏒᎢ ᏨᏕᎨᏫ ᎭᏫᎾᏗᏢ [[nitric acid|nitric ᏧᏄᏦᏍᏔ]], ᎦᏙ ᎤᏍᏗ ᏫᎵ ᎠᎧᎵᏏᏐᏗ ᎤᎪᏗᏗ ᏐᎢ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ. Nitric ᏧᏄᏦᏍᏔ ᎤᎭ ᎦᏅᎯᏓ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᎦᎫᏍᏛᏗ ᎯᎠ ᎡᏙᎲᎩ ᎠᏕᎸ ᏓᎶᏂᎨ ᎭᏫᎾᏗᏢ ᏫᏚᏳᎪᏛ. 
 
 == ᎢᎦᏪᏛ ᎨᎦᏓᏅᏖᏗ ==
 ᎠᏕᎸ ᏓᎶᏂᎨ ᎨᏒᎢ metallic ᏑᏓᎴᎩ ᎬᏙᏗ ᎨᎦᏓᏅᏖᏗ [[yellow|ᏓᎶᏂᎨ]] ᏗᎧᏃᏗ, ᎠᎴ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ [[black|ᎬᎿᎨ]] ᎠᎴ [[ruby|ᎩᎦᎨ]] ᎯᎳᎪ ᎢᏳ ᎣᏌᏂ ᎤᏂᏯᏙᎸ, ᎾᎯᏳᎢ [[colloid]] ᎦᎾᏄᎪᏫᏒ ᎪᎷᏩᏛᏓ ᎠᎴ ᏂᎬᎢ ᎠᏑᏫᏒ ᎠᎴ ᎢᏳᏓᎵᎭ [[purple|ᎩᎨᏍᏗ]]. ᎾᏍᎩ ᎯᎠ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎠᎴ ᎯᎠ ᏄᎵᏍᏔᏅ ᎠᏕᎸ ᏓᎶᏂᎨ ᎤᏤᎵ [[plasmon frequency|plasmon ᎠᏍᏓᏩᏛᏍᏙᏗ]] ᎠᏝᎥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎬᎪᏩᏛᏗ ᎠᏍᏓᏅᏅ, ᎦᏙ ᎤᏍᏗ ᏂᏕᎬᏂᏏᏍᎬ ᎩᎦᎨ ᎠᎴ ᏓᎶᏂᎨ ᎠᏨᏍᏛ ᎾᏍᏋ reflected, ᎠᎴ ᏌᎪᏂᎨ ᎠᏨᏍᏛ ᎾᏍᏋ ᎠᎦᏎᏍᏙᏗ. ᎾᏍᎩ ᎤᏩᏒ ᎠᏕᎸ ᎤᏁᎬ colloids ᎬᏂᎨᏒ ᏂᎬᏅ ᎯᎠ ᎤᏠᏱ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ ᎠᏨᏍᏛ, ᎥᏓᏓᎫᏴᎡᏗᏱ ᎾᎾᎢ ᏍᏆᎵᎯᎨᏍᏗ ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᏃᏢᏍᎬ ᎠᏕᎸ ᎤᏁᎬ colloids ᏓᎶᏂᎨ ᎭᏫᎾᏗᏢ ᏗᎧᏃᏗ.
@@ -93,7 +93,7 @@
 
 ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎠᏕᎸ ᏓᎶᏂᎨ ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᎦᏐᎯ ᏕᎦᏃᏣᎸ ᎭᏫᎾᏗᏢ ᎠᎳᏏᏅᏙᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ [[gold standard|ᎠᏕᎸ ᏓᎶᏂᎨ ᏰᎵᏊ ᏗᏙᎳᎩ]] ᎤᏙᎯᏳ [[weight|ᏄᏓᎨᏒ]] ᎠᏕᎸ ᏓᎶᏂᎨ ᏥᏄᏍᏛᎩ ᎠᏓᏁᎸ ᎯᎠ ᏚᏙᎥ ᏌᏊᎭ ᏕᎦᏃᏣᎸ. ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ ᎠᎴᏫᏍᏙᏗ, ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏫᏒᏗ ᎯᎠ ᏧᎬᏩᎶᏗ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎤᏃᏍᏓ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᏌᏊ  [[troy weight|troy ᏄᏓᎨᏒ]] ᏥᏄᏍᏛᎩ ᎢᏗᎦᏗ $20.67 ($664.56/kg), ᎠᎴ ᎭᏫᎾᏗᏢ 1934 ᎯᎠ ᎤᏃᏍᏓ ᏥᏄᏍᏛᎩ revalued $35.00 ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ troy ᏄᏓᎨᏒ ($1125.27/kg). ᎾᎥᎢ 1961 ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏗᎾᏙᎳᎩ ᎠᏍᏓᏯ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎪᎯ ᏧᎬᏩᎶᏗ, ᎠᎴ ᎦᏁᎲ ᎢᏧᎳ ᎠᏴ ᎠᎴ European ᎠᏕᎸ ᏗᏗᏱ ᏚᏓᏂᎸᏨ ᎠᏒᎾᏍᏗ ᎯᎠ ᎤᏂᎾᏗᏅᏗ ᎠᎴᏫᏍᏔᏅ ᎤᏗᏗᏢ ᏕᎦᏃᏣᎸ devaluation ᏗᎦᏘᎴᎩ ᎤᏁᏉᏨᎯ ᎠᏕᎸ ᏓᎶᏂᎨ ᎠᏔᏲᏍᏗ.
 
-ᎾᎿ 17 ᎠᎾᏱᎵᏒ 1968, ᎠᎳᏏᏅᏙᏗ ᏂᏚᏍᏗᏓᏅ ᎢᎬᏂᏌᏅᎯ ᎯᎠ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎯᎠ ᎠᏕᎸ ᏓᎶᏂᎨ ᎦᏁᎲ, ᎠᎴ ᏔᎵ-tiered pricing ᎠᏓᏅᏖᏗ ᏥᏄᏍᏛᎩ ᎪᏢᏅ ᎾᏍᎩ ᏯᏛᎿ ᎠᏕᎸ ᏓᎶᏂᎨ ᏥᏄᏍᏛᎩ ᏙᎢ ᎬᏔᏅᎯ ᎠᏓᏁᎳᏅᎯ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎠᏕᎳ ᎾᎾᎢ ᎯᎠ ᎠᎦᏴᎵ $35.00 ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ troy ᏄᏓᎨᏒ ($1.13/g) ᎠᎴ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᎾᎿ ᎯᎠ ᎤᏤᎵᏓ ᎤᏂᎾᏗᏅᏗ ᏥᏄᏍᏛᎩ ᎠᎾᏓᏁᎲ ᏒᏃᏱ ᎡᎯ ᏅᏙ; ᎪᎯ ᏔᎵ-tiered pricing ᎢᏯᏛᏁᎵᏓᏍᏗ ᏥᏄᏍᏛᎩ ᏚᏲᏒᎩ ᎭᏫᎾᏗᏢ 1975 ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᏥᏄᏍᏛᎩ ᎠᎦᏍᎦᏂ ᎠᏩᏛᏗ Ꮝ ᎠᏎᏊᎢ-ᎤᏂᎾᏗᏅᏗ ᎤᏩᎾᏕᏍᎩ. ᎠᏰᎵ ᎠᏕᎸ ᏗᏗᏱ ᏙᎢ ᏚᏂᏴ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ [[official gold reserves|ᎠᏕᎸ ᏓᎶᏂᎨ ᎠᎾᏗᏒᎯᎯ]] ᏥᏄᏍᏗ [[store of value|ᎠᏓᎾᏅ  ᏧᎬᏩᎶᏗ]] ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎤᎭ ᏂᎦᎥᏊ ᏭᏪᏙᎢ ᎢᏳᏕᏘᏴᏓ. ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎨᏒᎢ Ꮎ ᎯᎠ [[U.S. Federal Reserve Bank|ᎠᎹᏰᏟ ᏂᎬᎾᏛ ᎠᏰᎵ ᎧᏃᎯᏯᏍᏗ ᎠᏕᎸ ᏗᏗ]] ᎭᏫᎾᏗᏢ [[New York|ᎢᏤ York]].
+ᎾᎿ 17 ᎠᎾᏱᎵᏒ 1968, ᎠᎳᏏᏅᏙᏗ ᏂᏚᏍᏗᏓᏅ ᎢᎬᏂᏌᏅᎯ ᎯᎠ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎯᎠ ᎠᏕᎸ ᏓᎶᏂᎨ ᎦᏁᎲ, ᎠᎴ ᏔᎵ-tiered pricing ᎠᏓᏅᏖᏗ ᏥᏄᏍᏛᎩ ᎪᏢᏅ ᎾᏍᎩ ᏯᏛᎿ ᎠᏕᎸ ᏓᎶᏂᎨ ᏥᏄᏍᏛᎩ ᏙᎢ ᎬᏔᏅᎯ ᎠᏓᏁᎳᏅᎯ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎠᏕᎳ ᎾᎾᎢ ᎯᎠ ᎠᎦᏴᎵ $35.00 ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ troy ᏄᏓᎨᏒ ($1.13/g) ᎠᎴ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᎾᎿ ᎯᎠ ᎤᏤᎵᏓ ᎤᏂᎾᏗᏅᏗ ᏥᏄᏍᏛᎩ ᎠᎾᏓᏁᎲ ᏒᏃᏱ ᎡᎯ ᏅᏙ; ᎪᎯ ᏔᎵ-tiered pricing ᎢᏯᏛᏁᎵᏓᏍᏗ ᏥᏄᏍᏛᎩ ᏚᏲᏒᎩ ᎭᏫᎾᏗᏢ 1975 ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᏥᏄᏍᏛᎩ ᎠᎦᏍᎦᏂ ᎠᏩᏛᏗ Ꮝ ᎠᏎᏊᎢ-ᎤᏂᎾᏗᏅᏗ ᎤᏩᎾᏕᏍᎩ. ᎠᏰᎵ ᎠᏕᎸ ᏗᏗᏱ ᏙᎢ ᏚᏂᏴ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ [[official gold reserves|ᎠᏕᎸ ᏓᎶᏂᎨ ᎠᎾᏗᏒᎯᎯ]] ᏥᏄᏍᏗ [[store of value|ᎠᏓᎾᏅ  ᏧᎬᏩᎶᏗ]] ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎤᎭ ᏂᎦᎥᏊ ᏭᏪᏙᎢ ᎢᏳᏕᏘᏴᏓ. ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎨᏒᎢ Ꮎ ᎯᎠ [[U.S. Federal Reserve Bank|ᎠᎹᏰᏟ ᏂᎬᎾᏛ ᎠᏰᎵ ᎧᏃᎯᏯᏍᏗ ᎠᏕᎸ ᏗᏗ]] ᎭᏫᎾᏗᏢ [[New York|[[New York|ᏄᏯᎩ]]]].
 
 ᎣᏂ ᏧᏩᎫᏛ 1968 ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᏕᎸ ᏓᎶᏂᎨ ᎾᎿ ᎯᎠ ᎠᏍᏚᎢᏛ ᎤᏂᎾᏗᏅᏗ ᎤᎭ ranged ᏂᎬᎢ, ᎬᏙᏗ ᎪᏪᎸ ᎦᎸᎳᏗ $850/oz ($27,300/kg) ᎾᎿ 21 ᎤᏃᎸᏔᏂ 1980, ᎡᎳᏗ $252.90/oz ($8,131/kg) ᎾᎿ 21 ᏕᎭᎷᏱ]] 1999 (London ᎣᏍᏛ ᎢᎬᏁᏗ).<ref>{{cite web | url=http://kitco.com/LFgif/au75-pres.gif | title=kitko.com: GOLD - London PM Fix 1975 - present (GIF) | accessdate=2006-07-22}}</ref> ᎾᎿ 11 ᎠᎾᏍᎬᏘ 2006 ᎯᎠ London ᎠᏕᎸ ᏓᎶᏂᎨ ᎣᏍᏛ ᎢᎬᏁᏗ ᏥᏄᏍᏛᎩ $715.50/oz.<ref>{{cite web | url=http://www.lbma.org.uk/statistics_current.htm | title=London Gold & Silver Statistics from the LBMA | accessdate=2006-07-22}}</ref>
 
