--- a/ᏡᎬᎢ.mw
+++ b/ᏡᎬᎢ.mw
@@ -7,7 +7,7 @@
 [[File:Raunkiaer.jpg|200px|right|thumb| [[oak|ᏧᏍᎦ]] ᏡᎬ ᎭᏫᎾᏗᏢ [[Denmark]]]]
 ᏡᎬ ᎨᏒᎢ ᎦᎪᏘ ᎤᏙᏢᏒ ᎠᎴ ᏕᏡᎬ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ [[order (biology)|ᏓᎾᏓᏅᏍᎬᎢ]] ᎠᎴ [[family (biology)|ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ]] ᏗᎦᎪᎯᏗ. ᏕᏡᎬ ᎯᎠ ᎢᏴ ᎤᎾᏛᏁᎸᏗ ᎠᏯᏖᎾ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎤᏛᏏᏗᏒ ᎤᏙᏢᏒ, ᎤᎦᎶᎬ ᏗᎦᎪᏗ ᎠᎴ ᎤᏙᏢᏒᎢ, ᎤᏯᎸ ᎨᎦᏓᏅᏖᏗ, ᎠᏤᎯᏐᏗᏱ ᎠᏛᎯᏍᏙᏗ, ᎠᎴ ᎤᏠᏯᏍᏗ.
 
-ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᏕᏡᎬ ᎨᏒᎩ [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]] ᎠᎴ [[horsetail|ᏐᏈᎵ ᎦᏂᏗᏛ]], ᎦᏙ ᎤᏍᏗ ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏙᎯ ᎢᎾᎨ ᎭᏫᎾᏗᏢ ᎯᎠ [[Carboniferous]] ᎠᎴᏫᏍᏙᏗ; ᏡᎬ ᏲᎾ ᏤᏍ ᏙᎢ ᏩᎵᏃᎯᏯᏍᎬ, ᎠᎴ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᏩᎵᏃᎯᏯᏍᎬ ᏐᏈᎵ ᏗᎦᏙᎦ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏡᎬ ᎤᏙᏢᏒ. ᎣᏂᏯᎨᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ [[Triassic]] ᎠᎴᏫᏍᏙᏗ, [[Pinophyta|conifers]], [[ginkgo]], [[cycad]] ᎠᎴ ᏐᎢ [[gymnosperm]] ᎤᎾᏄᎪᏨ, ᎠᎴ ᎠᏍᏓᏩᏗᏒ [[flowering plant|ᎠᏛᎯᏍᏙᏗ ᎦᎪᏘ]]ᎭᏫᎾᏗᏢ ᎯᎠ [[Cretaceous|ᎤᎾᏥ]] ᎠᎴᏫᏍᏙᏗ. ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎪᎯ ᎢᎦ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᏗᎦᎪᎯᏗ ᎠᎴ conifers. ᎯᎠ ᏙᎪᏩᎸ ᎡᎳᏗᏢ ᎠᏓᏁᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎤᎪᏗᏗ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ ᏕᏡᎬ ᎠᎴ ᎯᎳᎪ ᎤᏅᏌ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ classified.
+ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᏕᏡᎬ ᎨᏒᎩ [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]] ᎠᎴ [[horsetail|ᏐᏈᎵ ᎦᏂᏗᏛ]], ᎦᏙ ᎤᏍᏗ ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏙᎯ ᎢᎾᎨ ᎭᏫᎾᏗᏢ ᎯᎠ [[Carboniferous]] ᎠᎴᏫᏍᏙᏗ; ᏡᎬ ᏲᎾ ᏤᏍ ᏙᎢ ᏩᎵᏃᎯᏯᏍᎬ, ᎠᎴ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᏩᎵᏃᎯᏯᏍᎬ ᏐᏈᎵ ᏗᎦᏙᎦ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏡᎬ ᎤᏙᏢᏒ. ᎣᏂᏯᎨᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ [[Triassic]] ᎠᎴᏫᏍᏙᏗ, [[Pinophyta|conifers]], [[ginkgo]], [[cycad]] ᎠᎴ ᏐᎢ [[gymnosperm]] ᎤᎾᏄᎪᏨ, ᎠᎴ ᎠᏍᏓᏩᏗᏒ [[flowering plant|ᎠᏛᎯᏍᏙᏗ ᎦᎪᏘ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Cretaceous|ᎤᎾᏥ]] ᎠᎴᏫᏍᏙᏗ. ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎪᎯ ᎢᎦ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᏗᎦᎪᎯᏗ ᎠᎴ conifers. ᎯᎠ ᏙᎪᏩᎸ ᎡᎳᏗᏢ ᎠᏓᏁᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎤᎪᏗᏗ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ ᏕᏡᎬ ᎠᎴ ᎯᎳᎪ ᎤᏅᏌ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ classified.
 
 ᎤᏍᏗ ᎤᎾᏓᏟᏌᎲ ᏕᏡᎬ ᎠᏛᏏᏒ ᎢᏧᎳ ᎨᏒᎢ ᎤᏯᏅᎲ [[grove (nature)|ᎸᏱ]] ᎠᎴ '''ᎦᎪᏘ''', ᎠᎴ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎫᏝᎢ ᎾᎥᎢ ᎠᏫᏒᏗ ᎤᏛᏏᏗᏒ ᏕᏡᎬ ᎨᏒᎢ ᎤᏯᏅᎲ '''[[forest|ᎠᏙᎯ ᎢᎾᎨ]]'''. ᎯᎸᏍᎩ [[biotope]] ᎠᎴ ᎧᏁᎢᏍᏔᏅᎯ ᎡᏆᏯ ᎾᎥᎢ ᎯᎠ ᏕᏡᎬ Ꮎ ᎦᎷᎯᏍᏗ ᎠᏂ; ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴ [[rainforest]] ᎠᎴ [[taiga]] (ᎠᎪᏩᏛᏗ [[ecozone]]). ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᏕᏡᎬ scattered ᎠᎴ spaced ᏗᎦᎾᏗᎯᏍᏗ grassland (ᎤᏠᏱᎭ grazed ᎠᎴ ᎤᎴᏴᏒ ᎦᏬᎯᎸᏙᏗ ᎠᏓᏅᏍᏗ) ᎨᏒᎢ ᎤᏯᏅᎲ '''[[savanna|ᏂᎬᏅ]]'''.
 
@@ -29,16 +29,15 @@
 
 ;Tallest ᏕᏡᎬ
 ᎯᎠ ᏂᎦᏛᎢ ᎯᎠ tallest ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎤᎭ ᏭᏪᏙᎢ ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎤᎪᏗ ᎠᏗᏒᏍᏗ ᎠᎴ ᎤᏣᏘ (ᎢᏳᏓᎵᎭ ᎨᏯᏔᎯ) ᏄᎶᏍᎨᏗᏴᎾ. ᎪᎯᏊ ᎢᏴ ᏥᎩ verified ᎠᏓᏃᎮᏗ ᎬᏙᏗ [[laser]] rangefinders ᎦᏟᏌᏅ ᎬᏙᏗ ᎠᏍᏓᏅᏅ ᎪᎭᏍᎬ ᏗᏟᎶᏛ ᎪᏢᏅᎯ ᎾᎥᎢ ᏡᎬ ᎫᎴᎦ, ᎠᏫᏛᏓ ᎠᏥᏄᏉᏫᏍᎬ ᎾᎥᎢ ᎯᎠ U.S. Eastern Native Tree Society<ref>[http://www.uark.edu/misc/ents/index.html U.S. Eastern Native Tree Society]</ref> ᎤᎭ ᎤᎾᏓᏎᎮᎸᎩ Ꮎ ᎤᎪᏗᏗ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎢᏗᎬᎾᏗ ᎠᎴ ᏗᏟᎶᏛ ᎠᎴ ᎤᏝᏏᏛ, ᎢᏳᏓᎵᎭ ᎠᏛᎯᏍᏗᏍᎬ ᏄᎶᏍᎨᏗᏴᎾ 5% 15% ᎦᎸᎳᏗᏢ ᎯᎠ ᎤᏙᎯᏳ ᎾᏍᎩ ᏂᎦᏛᎢ. ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᏕᏡᎬ 114 m, 117 m, 130 m, ᎠᎴ ᎢᏧᎳᎭ 150 m, ᎠᎴ ᎾᏊ ᎡᏆᏯ ᎬᎨᏫᏍᏗ ᏥᏄᏍᏗ ᎤᏝᏏᏛ, ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᏚᏳᎪᏛ ᎦᎶᏄᎮᏛ. ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎠᎴ ᎾᏊ accepted ᏥᏄᏍᏗ ᎯᎠ ᎦᏚᎢ ᎯᏍᎩ tallest reliably ᎡᎷᏪᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ:
-# [[Sequoia|ᏏᏉᏯ]] ''Sequoia sempervirens'': '''112.83 m''', Humboldt Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, [[California|ᎠᏕᎳᏧᏢᎢ]].<ref>[http://www.conifers.org/cu/se/index.htm Gymnosperm Database]</ref>
+# [[Sequoia|ᏎᏉᏯ]] ''Sequoia sempervirens'': '''112.83 m''', Humboldt Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, [[California|ᎠᏕᎳᏧᏢᎢ]].<ref>[http://www.conifers.org/cu/se/index.htm Gymnosperm Database]</ref>
 # [[Coast Douglas-fir|ᎠᎹᏳᎸᏗ Douglas-ᎢᏤ ᎠᏓ]] ''Pseudotsuga menziesii'': '''100.3 m''', Brummit ᎤᏍᏗ ᎤᏪᏴ, [[Coos County, Oregon|ᎠᏠᏯᏍᏗ ᏍᎦᏚᎩ, ᎤᏩᎦᏂ]]<ref>[http://www.conifers.org/pi/ps/menziesii2.htm Gymnosperm Database]</ref>
 # [[Sitka Spruce|Sitka ᏕᎦᏅᎦᎵᏍᎬ]] ''Picea sitchensis'': '''96.7 m''', ᎢᎪᏗ ᎤᏍᏗ ᎤᏪᏴ Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎠᏕᎳᏧᏢᎢ ([http://www.conifers.org/pi/pic/sitchensis.htm Gymnosperm Database])
 # [[Sequoiadendron|ᏂᎬᎢ ᏏᏉᏯ]] ''Sequoiadendron giganteum'': '''93.6 m''', Redwood ᎣᏓᎸ ᎸᏱ, ᎠᏕᎳᏧᏢᎢ<ref>[http://www.conifers.org/cu/se2/index.htm Gymnosperm Database]</ref>
 # [[Eucalyptus regnans]] ''Eucalyptus regnans'': '''92.0 m''', ᏨᏍᎩᏃ ᎤᎨᏓᎵᏴ, [[Tasmania]]<ref>[http://www.forestrytas.com.au/forestrytas/tasfor/tasforests_12/tasfor_12_09.pdf Forestry Tasmania] [pdf file]</ref>
 
 [[File:Tree From Below.JPG|thumb| ᏗᎧᏃᏗᎢ ᏡᎬ ᏂᏛᎴᏅᏓ ᎡᎳᏗᏢ; ᎪᎯ ᎠᎾᏍᎬᏘ ᎦᎶᏒᏍᏔᏅ ᎬᎪᏩᏛᏗ ᏂᎦᏛᎢ]]
-
 ;Stoutest ᏕᏡᎬ
-ᎯᎠ ᏕᎬᏔᏛ ([[circumference|ᎦᏃᎴᏍᎬ]]) ᏡᎬ ᎨᏒᎢ – ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᎢᏳᏗᎾ ᎾᏍᏋ – ᎤᏣᏘ ᎠᎯᏗᎨ ᎠᏟᎶᏍᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏂᎦᏛᎢ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎨᏒᎢ ᏄᏦᏍᏛᎾ ᎢᏳᏍᏗ ᏯᏛᎿ ᏗᏓᏁᏍᏙᏗ ᎠᏍᏓᏅᏅ ᎦᏌᏆᎸ ᎯᎠ ᎧᏁᏌᎢ, ᎠᎴ ᎦᎾᏌᏁᏍᎬ ᎾᏍᎩ ᏧᏠᎯᏍᏗ ᎠᏩᏛᏗ ᎯᎠ ᎦᏃᎴᏍᎬ. ᎦᎾᏆᏘᏍᏗ ᎪᎯ, U.K. ᏡᎬ ᎪᏪᎵ ᎠᎪᏪᎵ ᎪᎵᏍᎩ [[Alan Mitchell]] ᎪᏢᏅᎯ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎧᏁᎢᏍᏙᏗ ᎬᏩᏚᏫᏛ ᏗᏟᎶᏛ [[Taxus baccata|ᎦᎪᏘ]] ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ [[British Isles|ᎩᎵᏏ ᎠᎽᏰᎵ]]: 
+ᎯᎠ ᏕᎬᏔᏛ ([[circumference|ᎦᏃᎴᏍᎬ]]) ᏡᎬ ᎨᏒᎢ – ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᎢᏳᏗᎾ ᎾᏍᏋ – ᎤᏣᏘ ᎠᎯᏗᎨ ᎠᏟᎶᏍᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏂᎦᏛᎢ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎨᏒᎢ ᏄᏦᏍᏛᎾ ᎢᏳᏍᏗ ᏯᏛᎿ ᏗᏓᏁᏍᏙᏗ ᎠᏍᏓᏅᏅ ᎦᏌᏆᎸ ᎯᎠ ᎧᏁᏌᎢ, ᎠᎴ ᎦᎾᏌᏁᏍᎬ ᎾᏍᎩ ᏧᏠᎯᏍᏗ ᎠᏩᏛᏗ ᎯᎠ ᎦᏃᎴᏍᎬ. ᎦᎾᏆᏘᏍᏗ ᎪᎯ, [[UK|ᎡᎵᏏᎯ]] ᏡᎬ ᎪᏪᎵ ᎪᏪᎵ ᎪᏪᎵᏍᏗ [[Alan Mitchell]] ᎪᏢᏅᎯ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎧᏁᎢᏍᏙᏗ ᎬᏩᏚᏫᏛ ᏗᏟᎶᏛ ''[[Taxus baccata|ᎦᎪᏘ]]'' ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ [[British Isles|ᎩᎵᏏ ᎠᎽᏰᎵ]]: 
 :"ᎯᎠ ᏧᎾᏍᏗ ᏧᏆᎫᏔᏅᏒ ᏗᏟᎶᏛ ᎦᎪᏘ ᎠᎴ ᎤᏗᏗᏢ ᎤᏬᎯᏳᏒ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᏡᎬ ᎾᎾᎢ Tisbury ᎤᎭ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎧᏁᎢᏍᏔᏅᎯ, ᎤᏓᏅᎦᎸᏓ, ᎢᏳᏃ ᏂᏙᏓᎳᎬᎾ ᏂᎦᏛ ᎾᎾᎢ ᎠᏂᎦᏲᎵ 1.5 m ᎦᏅᎯᏓ. ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ ᎠᏩᏛᏗ ᎤᎭ ᏕᎬᏔᏛ ᎦᏙ ᎤᏍᏗ ᎤᎭ dilated ᎠᎴ ᎢᎦᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎶᎯᏍᏗ: 11.28 m (1834 Loudon), 9.3 m (1892 Lowe), 10.67 m (1903 Elwes ᎠᎴ Henry), 9.0 m (1924 E. Swanton), 9.45 m (1959 Mitchell) .... ᎢᎬᏱᎨᏍᏙᏗ ᏗᏟᎶᏛ ᎤᎭ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏭᏪᏙᎢ ᎠᎧᎵᏏᏐᏗ".
 
 ᏥᏄᏍᏗ ᏂᎦᎥ ᏰᎵᏊ ᏗᏙᎳᎩ, ᏡᎬ ᏕᎬᏔᏛ ᎨᏒᎢ ᎠᎩᏒᎯ ᎾᎾᎢ 'ᎦᏁᏥ ᏂᎦᏛᎢ'; ᎪᎯ ᎨᏒᎢ ᎧᏁᎢᏍᏔᏅᎯ ᏧᏓᎴᎿᎢᎭ ᎭᏫᎾᏗᏢ ᏄᏓᎴᎿᎥ ᏄᏍᏗᏓᏅ, ᎬᏙᏗ ᎤᎪᏗᏗ [[forestry|foresters]] ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᏕᎬᏔᏛ ᎾᎾᎢ 1.3 m ᎦᎸᎳᏗᏢ ᎦᏙᎯ, ᎾᎯᏳᎢ [[ornamental plant|ᎤᏬᏚ ᏡᎬ]] measurers ᎤᏠᏱᎭ ᎠᏟᎶᏍᏗ ᎾᎾᎢ 1.5 m ᎦᎸᎳᏗᏢ ᎦᏙᎯ; ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎪᎯ ᏗᎪᏢᏅ ᎤᏍᏗ ᏧᏓᎴᎿᎢ ᎯᎠ ᎡᎷᏪᎢ ᏕᎬᏔᏛ. ᎾᎿ ᎠᎷᏚᎧᏘ ᎦᏙᎯ, ᎯᎠ "ᎦᎸᎳᏗᏢ ᎦᏙᎯ" ᏩᏎᎸᎯ ᎪᏍᏓᏱ ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎩᏒᎯ ᏥᏄᏍᏗ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎪᏍᏓᏱ ᎾᎿ ᎯᎠ ᎦᏙᎯ ᎠᏒᏂᎲᎢ ᎯᎠ ᎧᏁᏌᎢ, ᎠᎴ ᎢᎦᏛ ᎬᏙᏗ ᎯᎠ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᎠᏰᎵ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎠᎴ ᎡᎳᏗᎨᏍᏙᏗ ᏗᎪᏍᏓᏱ ᎦᏙᎯ. ᎢᎦᏛ ᎯᎠ ᎠᏣᏅᏙ ᎠᎦᏴᎵ ᏗᏟᎶᏛ ᎠᎾᏍᎬᏘ ᎤᎭ ᏭᏪᏙᎢ ᎠᎩᏒᎯ ᎾᎾᎢ ᎦᏙᎯ ᎤᏩᎾᏕᏍᎩ. ᎢᎦᏛ ᏧᏆᎫᏔᏅᏒ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏗᏟᎶᏛ ᎾᏍᎩ ᎾᏍᏇ ᏄᎵᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎯᎠ ᎧᎵᏬᎯ ᏐᎢ--ᎤᏯᎸ ᎠᏓᏃᎮᏗ, ᎠᎵᏂᎬᏁᏗᎢ ᎯᎠ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᎠᎴ ᎠᏥᏄᏉᏫᏍᎬ ᎦᏬᎯᎸᏙᏗ ᏂᎦᎥᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᎴ ᎠᎵᏍᏕᎸᏗ.
@@ -63,7 +62,7 @@
 ᏱᏂᎬᏛᎾ, ᎯᎠ [[Fitzroya|Alerce]] ''Fitzroya cupressoides'', ᏥᏄᏍᏗ ᎩᎳ ᎦᎾᏆᏘᏍᏗ-ᎡᎷᏪᎢ, ᎠᎾᏍᎬᏘ ᎠᏔᎴᏒ ᎠᎹᏱ ᎠᏍᏚᎢᏍᎬ ᎭᏫᎾᏗᏢ ᎾᎾᎢ ᏦᎢᏁ ᎠᎴ ᏅᎩᏁ ᎾᎿᎢ, ᎠᎴ [[Taxodium mucronatum|Montezuma ᏗᏓᏂᏐᏗ]] ''Taxodium mucronatum'' ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏄᏓᎷᎸᎾ ᎾᏍᏋ ᎦᎸᎳᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏙᎪᏩᎸ. ᎯᎠ ᎤᏔᏂᎢᏍᏗ [[angiosperm]] ᏡᎬ ᎨᏒᎢ Australian ᎣᏓᎸ-ᎪᏍᏚ, ᎯᎠ 'ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ Grande' ᏡᎬ ᎬᏩᏚᏫᏛ 380 m³ ᎭᏫᎾᏗᏢ [[Tasmania]].
 
 ;ᎢᏳᏕᏘᏴᏓ ᏕᏡᎬ
-ᎯᎠ [[list of long-living organisms|ᎢᏳᏕᏘᏴᏓ]] ᏕᏡᎬ ᎠᎴ ᏕᎫᎪᏔᏅ ᎾᎥᎢ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎢᏳᏃ ᎯᎠ ᏡᎬ ᎨᏒᎢ ᎠᏰᎳᏍᏗ ᎡᎳᏗ ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎩᏒᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏍᏛᎢ ᎯᎠ centre ᎯᎠ ᏡᎬ. ᎧᎵ ᏗᏙᎳᎩ ᎤᎵᏍᏛ ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᏕᏡᎬ ᎦᏙ ᎤᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ, ᏂᎦᎥᏊ ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ seasonal ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ; ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᏧᏠᏱᎭ ᏧᎾᏬᏍᏗ ᎬᏙᏗ-seasonal ᎤᎦᎾᏭ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ ᎠᏛᏍᎬ ᎦᏌᏆᎸ ᎠᎴ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᎤᏤᎵᏛ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᎩ ᎤᏩᏒ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᏕᏡᎬ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎠᎧᎵᏬᎯ ᎯᎠ ᎠᏰᎵ ᎯᎠ ᏡᎬ; ᎤᎪᏗᏗ ᎤᏙᎯᏳ ᎠᎦᏴᎵ ᏕᏡᎬ ᏗᏙᎳᎩ ᎤᏒᏙᏂ ᏥᏄᏍᏗ ᎯᎠ ᎤᏲᎱᏒ [[Wood#Heartwood and sapwood|heartwood]] ᎠᎦᏲᎳᏗᏍᏗ ᎤᏣᏘᎾ. ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎾᏍᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎢᏳᏕᏘᏴᏓ ᎠᎦᏎᏍᏗ ᎤᎭ ᏭᏪᏙᎢ ᎪᏢᏅᎯ ᎾᎿ ᎯᎠ ᎠᎴᏅᏙᏗ extrapolating ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎤᏛᏏᏗᏒ ᏓᎬᏩᎶᏛ, ᎠᎴ ᎯᎠ ᏂᏚᎵᏍᏔᏅ ᎠᎴ ᎤᏠᏱᎭ ᎤᏍᏗ ᎤᏟ ᎢᏲᏍᏛ ᎬᎾᏬᏍᎬ ᏄᏍᏗᏓᏅ ᎠᎴ ᎨᏯᏔᎯ ᎤᏝᏅᏓᏕᎲ.
+ᎯᎠ [[list of long-living organisms|ᎢᏳᏕᏘᏴᏓ]] ᏕᏡᎬ ᎠᎴ ᏕᎫᎪᏔᏅ ᎾᎥᎢ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎢᏳᏃ ᎯᎠ ᏡᎬ ᎨᏒᎢ ᎠᏰᎳᏍᏗ ᎡᎳᏗ ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎩᏒᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏍᏛᎢ ᎯᎠ [[centre|ᎠᎹᏰᎵ]] ᎯᎠ ᏡᎬ. ᎧᎵ ᏗᏙᎳᎩ ᎤᎵᏍᏛ ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᏕᏡᎬ ᎦᏙ ᎤᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ, ᏂᎦᎥᏊ ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ seasonal ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ; ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᏧᏠᏱᎭ ᏧᎾᏬᏍᏗ ᎬᏙᏗ-seasonal ᎤᎦᎾᏭ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ ᎠᏛᏍᎬ ᎦᏌᏆᎸ ᎠᎴ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᎤᏤᎵᏛ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᎩ ᎤᏩᏒ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᏕᏡᎬ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎠᎧᎵᏬᎯ ᎯᎠ ᎠᏰᎵ ᎯᎠ ᏡᎬ; ᎤᎪᏗᏗ ᎤᏙᎯᏳ ᎠᎦᏴᎵ ᏕᏡᎬ ᏗᏙᎳᎩ ᎤᏒᏙᏂ ᏥᏄᏍᏗ ᎯᎠ ᎤᏲᎱᏒ [[Wood#Heartwood and sapwood|heartwood]] ᎠᎦᏲᎳᏗᏍᏗ ᎤᏣᏘᎾ. ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎾᏍᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎢᏳᏕᏘᏴᏓ ᎠᎦᏎᏍᏗ ᎤᎭ ᏭᏪᏙᎢ ᎪᏢᏅᎯ ᎾᎿ ᎯᎠ ᎠᎴᏅᏙᏗ extrapolating ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎤᏛᏏᏗᏒ ᏓᎬᏩᎶᏛ, ᎠᎴ ᎯᎠ ᏂᏚᎵᏍᏔᏅ ᎠᎴ ᎤᏠᏱᎭ ᎤᏍᏗ ᎤᏟ ᎢᏲᏍᏛ ᎬᎾᏬᏍᎬ ᏄᏍᏗᏓᏅ ᎠᎴ ᎨᏯᏔᎯ ᎤᏝᏅᏓᏕᎲ.
 
 ᎯᎠ verified ᎢᏳᏕᏘᏴᏓ ᎡᎷᏪᎢ ᎤᎧᏁᎳ ᎠᎴ ([http://www.conifers.org/topics/oldest.htm Gymnosperm Database]):
 # [[Great Basin Bristlecone Pine|ᎡᏆ ᎠᏟᏍᏙᏗ Bristlecone ᏃᏥ]] ''Pinus longaeva'': 4844 ᏧᏕᏘᏴᏓ
@@ -123,7 +122,7 @@
 ** [[Honey locust|ᏩᏚᎵᏏ ᎧᎶᏪᎩᏗ]], ''Gleditsia triacanthos''
 ** [[Black locust|ᎬᎿᎨ ᎧᎶᏪᎩᏗ]], ''Robinia pseudoacacia''
 ** [[Laburnum]], ''Laburnum'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-** [[Caesalpinia echinata|Pau Brasil]], Brazilwood, ''Caesalpinia echinata''
+** [[Caesalpinia echinata|Pau Brasil]], [[Brazilwood|ᏆᏏᎵᎢ-ᎠᏓ]], ''Caesalpinia echinata''
 * [[Fagaceae]] ([[Beech|ᎤᏙᎳᏂ]] ᏏᏓᏁᎸᎯ )
 ** [[Chestnut|ᎤᎾᎩᎾ]], ''Castanea'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Beech|ᎤᏙᎳᏂ]], ''Fagus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
@@ -143,7 +142,7 @@
 ** [[Bay Laurel|ᎥᏓᎵ ᎠᎧᏁᏍᏙᏗ]] ''Laurus nobilis''
 ** [[Avocado|ᎠᎵᏍᏓᏴᏗ]] ''Persea americana''
 * [[Lecythidaceae]] ([[Lecythidaceae|ᎠᎵᎮᎵᏥᏓᏍᏗ ᏐᎯ]] ᏏᏓᏁᎸᎯ)
-** [[Brazil Nut|Brazil ᏐᎯ]] ''Bertholletia excelsa''
+** [[Brazil Nut|ᏆᏏᎵᎢ ᏐᎯ]] ''Bertholletia excelsa''
 * [[Lythraceae]] [[Loosestrife]] ᏏᏓᏁᎸᎯ
 ** [[Crape-myrtle|ᎠᏍᎪᎾᏍᏗ-ᎬᎨᏳᎢ]] ''Lagerstroemia'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 * [[Magnoliaceae]] ([[Magnolia]] ᏏᏓᏁᎸᎯ)
@@ -238,7 +237,7 @@
 ** [[Date Palm|ᎢᏳ ᎢᎪᎯ ᏂᎦᏅᎯᏒ]], ''ᏧᎴᎯᏌᏅᎯ dactylifera''
 ** [[Chusan Palm|Chusan ᏂᎦᏅᎯᏒ]], ''Trachycarpus fortunei''
 * [[Poaceae]] ([[grass|ᎧᏁᏍᎦ]] ᏏᏓᏁᎸᎯ)
-** [[Bamboo]]Poaceae subfamily Bambusoideae
+** [[Bamboo]], Poaceae subfamily Bambusoideae
 * ᎠᏓᏚᎬ ᎪᏪᎵ Ꮎ [[banana|ᏆᏁᎾ]] 'ᏕᏡᎬ' ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᏕᏡᎬ; ᎤᏅᏌ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎪᏘ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎨᏒᎢ ᎯᎠ ᎥᎢᏒᎢ ᎦᏌᏆᎸ.
 
 === [[Pinophyta|Conifer]] (Pinophyta; softwood ᏕᏡᎬ) ===
