*Empty MediaWiki Message*

--- a/ᎠᏙᎯ_ᎢᎾᎨ.mw
+++ b/ᎠᏙᎯ_ᎢᎾᎨ.mw
@@ -33,13 +33,13 @@
 == ᎠᏙᎯ ᎢᎾᎨ ᎠᏓᏅᏖᎵᏙᎲ ==
 ᎯᎠ ᎠᏏᎾᏍᏛ ᎠᎦᏎᏍᏙᏗ ᎠᏙᎯ ᎢᎾᎨ ᎨᏒᎢ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[forest ecology|ᎠᏙᎯ ᎢᎾᎨ ᎤᎾᏙᏢᎯ]], ᎾᎯᏳᎢ ᎯᎠ ᎠᏓᏅᏖᎵᏙᎲ ᎠᏙᎯ ᎢᎾᎨ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[forestry]], ᎢᏳᏓᎵᎭ ᎬᏙᏗ ᎯᎠ ᎤᎵᏍᏛ [[sustainable resource extraction|sustainable resource ᎤᏲᏨᎯ]]. ᎠᏙᎯ ᎢᎾᎨ ecologists ᎤᏓᏂᏝᏅ ᎾᎿ ᎠᏙᎯ ᎢᎾᎨ ᏧᎾᏟᎶᏍᏙᏗ ᎠᎴ processes, ᎤᏠᏱᎭ ᎬᏙᏗ ᎯᎠ ᎠᎵᏐᏍᏛ elucidating ᏂᎬᏂᏏᏍᎬ ᎠᎴ ᎢᏳᎵᏍᏙᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ. Foresters ᎢᏳᏓᎵᎭ ᎠᏰᎵ ᎾᎿ ᎠᏓ ᎤᏲᏨᎯ ᎠᎴ [[silviculture]], ᎠᏠᏯᏍᏗᏍᎩ ᏡᎬ [[regeneration|ᎠᏤᎯᏐᏗᏱ]] ᎠᎴ ᎤᏛᏏᏗᏒ processes.
 
-ᎠᏙᎯ ᎢᎾᎨ ᏰᎵᏇ ᎾᏍᏋ ᎠᏲᎶᎬ ᎯᎳᎪ ᎢᏳ [[logging]], [[forest fire|ᎠᏙᎯ ᎢᎾᎨ ᎠᏥᎸ]], [[acid rain|ᏧᏄᏦᏍᏔ ᎠᎦᏍᎬ]], [[herbivores]], ᎠᎴ [[diseases|ᎥᏳᎩ]], ᏄᎾᏛᏅ ᏐᎢ ᏧᏓᎴᏅᏓ, ᏂᎬᏂᏏᏍᎬ ᎤᏲᏨᎯ ᏕᏡᎬ. ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎤᎪᏗᏗ ᎠᏙᎯ ᎢᎾᎨ ᎤᎭ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᏭᏪᏙᎢ ᎦᎸᏉᏔᏅ ᎾᎥᎢ ᎠᏂᏴᏫ ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᏧᏕᏘᏴᏓ ᎪᏢᎯᏌᏅ forestry ᎠᎵᏏᎾᎯᏍᏙᏗ ᎤᎭ ᎤᎵᏍᏕᎸᎲᎩ ᎪᏢᎯᏐᏗ ᎠᎴ ᏄᎶᏒᏍᏛᎾ ᎡᏆ ᏗᎦᏛᏗ ᎠᎴ ᎤᎶᏒᏍᏔᏅᎯ ᏓᏓᏛᎾᏍᏗᏍᎬ. ᏱᏂᎬᏛᎾ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᏙᎯ ᎢᎾᎨ ᎾᏛᏁᎸ ᎠᎦᏎᏍᏗ Ꮎ ᏂᎦᎥᎢ ᏑᏕᏘᏴᏓ ᎬᏩᏚᏫᏛ 1.5 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (6,000 km²) ᎯᎠ nation’s 750 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (3,000,000 km²) forestland ᎨᏒᎢ ᎤᎴᎾᎯᏛ [[urban sprawl|ᎦᏁᎸ ᏂᎦᏅᎯᏒ]] ᎠᎴ ᏚᏙᎳᏩᏛᎲ. ᎾᏍᎩ ᎨᏒᎢ utugi uwasv Ꮎ ᎯᎠ ᎤᎦᎾᏭ ᎤᏩᏒ ᏫᎵ ᎤᏓᏲᎱᏎᏗ 20 25 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (80,000 100,000 km²) ᏚᏙᎳᏩᏛᎲ.
+ᎠᏙᎯ ᎢᎾᎨ ᏰᎵᏇ ᎾᏍᏋ ᎠᏲᎶᎬ ᎯᎳᎪ ᎢᏳ [[logging]], [[forest fire|ᎠᏙᎯ ᎢᎾᎨ ᎠᏥᎸ]], [[acid rain|ᏧᏄᏦᏍᏔ ᎠᎦᏍᎬ]], [[herbivores]], ᎠᎴ [[diseases|ᎥᏳᎩ]], ᏄᎾᏛᏅ ᏐᎢ ᏧᏓᎴᏅᏓ, ᏂᎬᏂᏏᏍᎬ ᎤᏲᏨᎯ ᏕᏡᎬ. ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎤᎪᏗᏗ ᎠᏙᎯ ᎢᎾᎨ ᎤᎭ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᏭᏪᏙᎢ ᎦᎸᏉᏔᏅ ᎾᎥᎢ ᎠᏂᏴᏫ ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᏧᏕᏘᏴᏓ ᎪᏢᎯᏌᏅ forestry ᎠᎵᏏᎾᎯᏍᏙᏗ ᎤᎭ ᎤᎵᏍᏕᎸᎲᎩ ᎪᏢᎯᏐᏗ ᎠᎴ ᏄᎶᏒᏍᏛᎾ ᎡᏆ ᏗᎦᏛᏗ ᎠᎴ ᎤᎶᏒᏍᏔᏅᎯ ᏓᏓᏛᎾᏍᏗᏍᎬ. ᏱᏂᎬᏛᎾ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᏙᎯ ᎢᎾᎨ ᎾᏛᏁᎸ ᎠᎦᏎᏍᏗ Ꮎ ᏂᎦᎥᎢ ᏑᏕᏘᏴᏓ ᎬᏩᏚᏫᏛ 1.5 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (6,000 km²) ᎯᎠ nation’s 750 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (3,000,000 km²) forestland ᎨᏒᎢ ᎤᎴᎾᎯᏛ [[urban sprawl|ᎦᏁᎸ ᏂᎦᏅᎯᏒ]] ᎠᎴ ᏚᏙᎳᏩᏛᎲ. ᎾᏍᎩ ᎨᏒᎢ ᎤᎤᎩ ᎤᏩᏒ Ꮎ ᎯᎠ ᎤᎦᎾᏭ ᎤᏩᏒ ᏫᎵ ᎤᏓᏲᎱᏎᏗ 20 25 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (80,000 100,000 km²) ᏚᏙᎳᏩᏛᎲ.
 
 == ᏓᏓᏚᎬ ᎪᏪᎵ ==
 <references/>
 
 == ᏫᏓᏎᎸᎢ ==
-* [http://www.sciencedaily.com/releases/2006/01/060112035906.htm 2006-01-13, Sciencedaily: Deep-rooted Plants Have Much Greater Impact On Climate Than Experts Thought] Citat: "...ᎯᎠ [[tap root|ᎠᎫᎩᏍᏗ ᎤᎾᏍᏕᏢ]]ᏫᏓᏲᎯᏍᏗ [[Rain|rainwater]] ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏚᎢ ᎥᏓᎵ ᎠᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎦᏙᎯ ᎠᎴ redistribute ᎠᎹ...ᎧᏁᏉᎠ [[photosynthesis]] ᎠᎴ ᎯᎠ ᏙᎢ ᎠᎹ...ᎾᎥᎢ 40% ᎭᏫᎾᏗᏢ ᎯᎠ [[dry season|ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]...ᎾᎯᏳᎨᏒ ᎯᎠ ᎦᏚᎵᏓ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ, ᎾᏍᎩ ᎯᎠ digakohidi ᏰᎵᏇ ᎠᏓᎾᏅ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 10% ᎯᎠ ᎾᏕᏘᏴᎯᏒ [[Precipitation (meteorology)|ᏑᎾᎴᎢ]] ᏥᏄᏍᏗ ᎠᏍᏛᎩ ᏥᏄᏍᏗ 13 ᎠᏎᎯᎯ (43 ᏧᎾᎳᏏᏕᎾ) ᎭᏫᎾᏗᏢ ᎦᏙᎯ, ᎾᏍᏋ tapped ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎧᏲᏗ ᎢᏯᏅᏓ...ᏡᎬ ᎠᎲᏏᏓᏍᏗ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᏯᎢ ᏗᏂᏤᎷᎯᏍᎩ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎹ ᏗᏓᏁᏟᏴᏍᏗ yvwatuwidv ᎤᏣᏘ ᎦᏣᏄᎳᎯᎨ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᏰᎵᏇ ᎢᏳᏃ ᏰᎵ [[percolate|ᎢᏳᏍᏗ ᎧᏃᎮᏗ]] ᏗᎬᏩᎶᏒ ᎯᎠ [[soil|ᎦᏙᎯ]]..."
+* [http://www.sciencedaily.com/releases/2006/01/060112035906.htm 2006-01-13, Sciencedaily: Deep-rooted Plants Have Much Greater Impact On Climate Than Experts Thought] Citat: "...ᎯᎠ [[tap root|ᎠᎫᎩᏍᏗ ᎤᎾᏍᏕᏢ]]ᏫᏓᏲᎯᏍᏗ [[Rain|rainwater]] ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏚᎢ ᎥᏓᎵ ᎠᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎦᏙᎯ ᎠᎴ redistribute ᎠᎹ...ᎧᏁᏉᎠ [[photosynthesis]] ᎠᎴ ᎯᎠ ᏙᎢ ᎠᎹ...ᎾᎥᎢ 40% ᎭᏫᎾᏗᏢ ᎯᎠ [[dry season|ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]...ᎾᎯᏳᎨᏒ ᎯᎠ ᎦᏚᎵᏓ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ, ᎾᏍᎩ ᎯᎠ digakohidi ᏰᎵᏇ ᎠᏓᎾᏅ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 10% ᎯᎠ ᎾᏕᏘᏴᎯᏒ [[Precipitation (meteorology)|ᏑᎾᎴᎢ]] ᏥᏄᏍᏗ ᎠᏍᏛᎩ ᏥᏄᏍᏗ 13 ᎠᏎᎯᎯ (43 ᏧᎾᎳᏏᏕᎾ) ᎭᏫᎾᏗᏢ ᎦᏙᎯ, ᎾᏍᏋ tapped ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎧᏲᏗ ᎢᏯᏅᏓ...ᏡᎬ ᎠᎲᏏᏓᏍᏗ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᏯᎢ ᏗᏂᏤᎷᎯᏍᎩ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎹ ᏗᏓᏁᏟᏴᏍᏗ ᏴᏩᎤᏫᏛ ᎤᏣᏘ ᎦᏣᏄᎳᎯᎨ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᏰᎵᏇ ᎢᏳᏃ ᏰᎵ [[percolate|ᎢᏳᏍᏗ ᎧᏃᎮᏗ]] ᏗᎬᏩᎶᏒ ᎯᎠ [[soil|ᎦᏙᎯ]]..."
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 ;ᏂᎦᎥ
