--- a/ᎤᎾᏥ.mw
+++ b/ᎤᎾᏥ.mw
@@ -1,29 +1,29 @@
 [[File:Hoedhuette.jpg|thumb|right|250px]]
 '''ᎤᎾᏥ''' ᎨᏒᎢ [[precipitation (meteorology)|ᏑᎾᎴᎢ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ [[crystal|ᎤᏓᏅᏖᏗ]]ᎠᏍᏓᏅᏅ [[water|ᎠᎹ]] [[ice|ᎤᏁᏍᏓᎳ]], ᎤᏠᏯᏍᏛ ᏂᎬᎢ ᎤᏴᏢ. ᎣᏂ ᏧᏩᎫᏛ ᎾᏍᎩ ᎨᏒᎢ ᎠᏒᎾᏍᏗᏱ ᎤᏍᏗ ᎤᏐᏅ ᎠᏍᏓᏩᏛᏍᏗ ᎾᏍᎩ ᎨᏒᎢ [[granular material|ᎢᎦᎢ ᏭᏚᎸᏛ ᎬᏙᏗ]]. ᎾᏍᎩ ᎤᎭ ᎠᏍᏚᎢᏛ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏩᏂᎨᎢ ᎠᏛᎯᏍᏙᏗ, ᏄᏍᏗᏓᏅ ᎦᏇᏅᏅᎯ ᎾᎥᎢ ᎤᏓᏎᎦᏤᏗ [[pressure|ᎤᎳᏂᎬᎬ]]. 
 
-ᎤᎾᏥ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎯᎳᎪ ᎢᏳ [[water vapor|ᎠᎹ ᎥᏝ ᎪᎱᏍᏗ]] undergoes [[deposition (meteorology)|ᎦᎷᎯᏍᏗ]] ᎦᎸᎳᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Earth's atmosphere|ᎦᏃᎴᏍᎬ]] ᎾᎾᎢ ᏄᏁᏌᏴᏢ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 0&nbsp;°C, ᎠᎴ ᎾᎯᏳᎢ ᎦᎶᏍᎦ ᎯᎠ ᎦᏙᎯ.
+ᎤᎾᏥ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎪᏢᎯ ᎢᎬᏁᎸᎯ ᎯᎳᎪ ᎢᏳ [[water vapor|ᎠᎹ ᎥᏝ ᎪᎱᏍᏗ]] undergoes [[deposition (meteorology)|ᎦᎷᎯᏍᏗ]] ᎦᎸᎳᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Earth's atmosphere]] ᎾᎾᎢ ᏄᏁᏌᏴᏢ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 0&nbsp;°C, ᎠᎴ ᎾᎯᏳᎢ ᎦᎶᏍᎦ ᎯᎠ ᎦᏙᎯ.
 
 == ᏄᏍᏗᏓᏅ ==
 [[File:Earth-satellite-seasons.gif|thumb|270px|right|ᎥᎴᏂᏙᎲ snowcover ᎦᏁᏟᏴᏍᎬ ᎬᏙᏗ ᎯᎠ ᎠᏓᏁᏟᏴᏍᎬ ᏑᏕᏘᏴᏓ.]]
 :''ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ: [[List of Countries receiving snowfall|ᏙᎪᏩᎸ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎠᎩᏍᎬᎢ snowfall]]''
 ᎯᎠ ᎤᏝᏅᏓᏕᎲ snowfall varies ᎬᏙᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ, ᎦᎷᎯᏍᏗ, ᎠᎴ ᏐᎢ geographic ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᏯᏛᎿ ᏥᏄᏍᏗ [[latitude|ᎤᏜᏅᏛ]] ᎠᎴ [[elevation|ᏂᎦᏛᎢ]]. ᎭᏫᎾᏗᏢ ᎯᎠ latitudinal ᎡᏍᎦᏂ ᎾᎥᏂᎨᏍᏙᏗ ᎯᎠ [[equator|ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ]], ᎾᎿᎢ ᎨᏒᎢ ᎤᏟ ᎬᏰᎸᏗ ᎤᏍᏗ ᎤᏝᏅᏓᏕᎲ snowfall, 35° N ᎠᎴ 40°S ᎠᎴ ᎢᏳᏓᎵᎭ ᎧᏁᎢᏍᏔᏅ ᏥᏄᏍᏗ ᎤᏐᏅ delimiter. ᎯᎠ ᏭᏕᎵᎬᏗᏢ ᎠᎹᏳᎸᏗ ᎯᎠ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎡᏆ ᎦᏙᎯ ᏂᎦᏰᏙᎲ ᏅᏙᎲᏅ ᎤᎾᏥ ᎤᏣᏘ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎤᏜᏅᏛ.
 
-[[File:Snow_in_afgahnistan2.JPG|thumb|ᎤᎾᏥ capped ᏕᏡᎬ ᎭᏫᎾᏗᏢ Afghanistan.]]
+[[File:Afghanistan -21.gifG|thumb|ᎤᎾᏥ capped ᏕᏡᎬ ᎭᏫᎾᏗᏢ Afghanistan.]]
 
-ᏂᎪᎯᎸ ᎤᎾᏥ ᎫᏢᎥᏍᎬ ᎨᏒᎢ ᎦᎸᏉᏔᏅ ᎾᎥᎢ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎢᎦᎢ ᎢᎦᏘ ᎠᎷᏚᎧᏘ ᎾᎿ ᎯᎠ ᎦᏙᎯ, ᎢᎦᎢ ᎨᏒ snowfall ᎠᎴ ᎯᎠ ᎦᏌᏙᏯᏍᏗ ᎠᎴ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎯᎠ ᏅᎩᏨᎴ. ᏥᏄᏍᏗ ᏄᏁᏌᏴᏢ ᎠᏍᏓᏩᏛᏍᏗ ᎬᏙᏗ ᏂᎦᏛᎢ, ᎦᎸᎳᏗ [[mountain|ᎣᏓᎸ]], ᎢᏧᎳᎭ ᎾᎥᏂᎨ ᎯᎠ [[Equator|ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ]], ᎤᎭ ᏂᎪᎯᎸ ᎤᎾᏥ ᎫᏢᏗ ᎾᎿ ᎤᎾᏤᎵ ᎦᎸᎳᏗᏢ ᎢᎦᏛ, yvwatuwidv 5300 m ᎦᎸᎳᏗ. ᏱᏓᏟᎶᏍᏔᏅ ᎠᏠᏯᏍᏛ [[Mount Kilimanjaro|ᎠᎩᎶᎯᏍᏗ Kilimanjaro]] ᎭᏫᎾᏗᏢ [[Tanzania]] ᎠᎴ ᎯᎠ [[Tropical|ᎤᎦᎾᏭ]] [[Andes]] ᎭᏫᎾᏗᏢ [[South America|ᎤᎦᎾᏭ ᎠᎺᎵᎨ]]; ᏱᏂᎬᏛᎾ, ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᎤᎾᏥ ᎤᏙᎯᏳᎯᏯ ᎦᎾᏄᎪᎢᏍᏗ ᎾᎿ ᎯᎠ ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎨᏒᎢ ᎾᎾᎢ 4690 m ᏂᎦᏛᎢ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ ᎠᎷᏚᎧᏘ [[Cayambe (volcano)|Volcán Cayambe]] ᎭᏫᎾᏗᏢ [[Ecuador]] ([[Google Earth|Google ᎡᎶᎯ]] ᎾᏍᎩᏯᎢ). ᏧᏓᎴᎾᎢ, ᎤᎪᏗᏗ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ [[Arctic|ᏗᎦᏘᎸᏍᏗ]] ᎠᎴ [[Antarctic|ᏗᎦᏘᎸᏍᏗ]] ᎠᎩᏍᏗ ᎤᏙᎯᏳ ᎤᏍᏗ ᏑᎾᎴᎢ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎦᎣᎲᏒ ᎤᏍᏗ snowfall ᎦᎾᏆᏘᏍᏗ ᎯᎠ ᎤᏴᏍᏗ ᎤᏴᏢ (ᎡᎳᏗᏢ ᎤᏙᎯᏳ ᏄᏁᏌᏴᏢ, ᎤᏃᎴ ᎠᏏᏴᏫ ᎤᏓᏲᎱᏎᏗ Ꮝ ᏅᏏᎾᏒ ᏗᎦᏂᏴᎯ ᎢᎬᏁᎸ ᎠᎹ ᎥᏝ ᎪᎱᏍᏗ). ᎠᎭᏂ, ᎯᎠ ᎤᎾᏥ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎾᎢ ᎠᎺᏉᎯ ᎤᏩᎾᏕᏍᎩ.
+ᏂᎪᎯᎸ ᎤᎾᏥ ᎫᏢᎥᏍᎬ ᎨᏒᎢ ᎦᎸᏉᏔᏅ ᎾᎥᎢ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎢᎦᎢ ᎢᎦᏘ ᎠᎷᏚᎧᏘ ᎾᎿ ᎯᎠ ᎦᏙᎯ, ᎢᎦᎢ ᎨᏒ snowfall ᎠᎴ ᎯᎠ ᎦᏌᏙᏯᏍᏗ ᎠᎴ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎯᎠ ᏅᎩᏨᎴ. ᏥᏄᏍᏗ ᏄᏁᏌᏴᏢ ᎠᏍᏓᏩᏛᏍᏗ ᎬᏙᏗ ᏂᎦᏛᎢ, ᎦᎸᎳᏗ [[mountain|ᎣᏓᎸ]], ᎢᏧᎳᎭ ᎾᎥᏂᎨ ᎯᎠ [[Equator|ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ]], ᎤᎭ ᏂᎪᎯᎸ ᎤᎾᏥ ᎫᏢᏗ ᎾᎿ ᎤᎾᏤᎵ ᎦᎸᎳᏗᏢ ᎢᎦᏛ, ᏴᏩᏚᏫᏛ 5300 m ᎦᎸᎳᏗ. ᏱᏓᏟᎶᏍᏔᏅ ᎠᏠᏯᏍᏛ [[Mount Kilimanjaro|ᎠᎩᎶᎯᏍᏗ Kilimanjaro]] ᎭᏫᎾᏗᏢ [[Tanzania]] ᎠᎴ ᎯᎠ [[Tropical|ᎤᎦᎾᏭ]] [[Andes]] ᎭᏫᎾᏗᏢ [[South America|ᏧᎦᎾᏮ ᎠᎹᏰᎵ]]; ᏱᏂᎬᏛᎾ, ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᎤᎾᏥ ᎤᏙᎯᏳᎯᏯ ᎦᎾᏄᎪᎢᏍᏗ ᎾᎿ ᎯᎠ ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎨᏒᎢ ᎾᎾᎢ 4690 m ᏂᎦᏛᎢ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ ᎠᎷᏚᎧᏘ [[Cayambe (volcano)|Volcán Cayambe]] ᎭᏫᎾᏗᏢ [[Ecuador]] ([[Google Earth|Google ᎡᎶᎯ]] ᎾᏍᎩᏯᎢ). ᏧᏓᎴᎾᎢ, ᎤᎪᏗᏗ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ [[Arctic|ᏗᎦᏘᎸᏍᏗ]] ᎠᎴ [[Antarctic|ᏗᎦᏘᎸᏍᏗ]] ᎠᎩᏍᏗ ᎤᏙᎯᏳ ᎤᏍᏗ ᏑᎾᎴᎢ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎦᏙᎲᏒ ᎤᏍᏗ snowfall ᎦᎾᏆᏘᏍᏗ ᎯᎠ ᎤᏴᏍᏗ ᎤᏴᏢ (ᎡᎳᏗᏢ ᎤᏙᎯᏳ ᏄᏁᏌᏴᏢ, ᎤᏃᎴ ᎠᏏᏴᏫ ᎤᏓᏲᎱᏎᏗ Ꮝ ᏅᏏᎾᏒ ᏗᎦᏂᏴᎯ ᎢᎬᏁᎸ ᎠᎹ ᎥᏝ ᎪᎱᏍᏗ). ᎠᎭᏂ, ᎯᎠ ᎤᎾᏥ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎾᎢ ᎠᎺᏉᎯ ᎤᏩᎾᏕᏍᎩ.
 [[File:Falling snow Graz 2005 original.jpg|thumb|ᎦᎶᏍᎬ ᎤᎾᏥ ᎭᏫᎾᏗᏢ ᎢᎬᏱᏗᏢ ᎯᎠ [[University Library of Graz|ᏗᏕᎶᏆᏍᏗ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ Graz]], [[Austria]]]]
 
-ᎤᎾᏥ ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎤᎦᎾᏭ insulator conserving ᎯᎠ ᎤᎦᎾᏭ ᎯᎠ ᎡᎶᎯ ᎠᎴ ᏄᎾᏰᎯᏍᏛᎾ ᏠᎨᏏ ᏓᏫᏒ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏴᏢ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ. ᎾᎯᏳᎢ ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎬᏂᎨᏒ ᏄᏍᏛᎢ snowfall ᏰᎵᏇ, ᎾᎾᎢ ᎢᏧᏩᎣᏗ, ᎢᏧᎳᎭ disrupt ᎯᎠ infrastructure ᎠᎴ ᎾᎾᏛᏁᎲ ᎤᏔᏂᏗ ᎦᏙᎯ Ꮎ ᎨᏒᎢ ᎣᎩᏌᏛ ᏯᏛᎿ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ. Automotive ᏓᏓᏅᏓᏁᎸ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏰᎵ ᎡᏆᏯ inhibited ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎧᏬᎳᏕᏍᎬ ᏰᎵ ᏂᎦᏛ. ᏄᏦᏍᏛᎾ infrastructures ᏯᏛᎿ ᏥᏄᏍᏗ [[electricity|ᎢᏳᏊ]], ᎠᎾᎦᎵᏍᎩ ᎠᏏᎳᏛ ᎤᎵᏍᏕᎸᏗ, ᎠᎴ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᎠᏓᏁᏗ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎠᏍᏚᏗ ᎡᎳᏗ. ᎪᎯ ᏰᎵᏇ ᎦᏂ "[[snow day|ᎤᎾᏥ ᎢᎦ]]", ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎢᎦ ᎾᎿ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏗᏕᎶᏆᏍᏗ ᎠᎴ ᏐᎢ ᎾᎾᏛᏁᎲ ᎠᎴ cancelled ᎤᏍᏆᎸᎲ ᏂᎬᎢ ᎦᎨᏛ snowfall. ᎭᏫᎾᏗᏢ ᎡᏍᎦᏂ Ꮎ ᏄᎶᏒᏍᏛᎾ ᎤᎭ ᎤᏙᎯᏳ ᎤᏍᏗ ᎤᎾᏥ, ᎪᎯ ᎠᎾᏍᎬᏘ ᏄᎵᏍᏔᏅ ᎢᏧᎳᎭ ᎬᏙᏗ ᎠᏨᏍᏛ ᎤᏓᏂᏝᏅ, ᎪᎱᏍᏗ ᎢᏳᏓᎵᎭ ridiculed ᎾᎥᎢ ᎾᏍᎩ ᏴᏫ ᎣᎩᏌᏛ colder [[climate|ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ]], ᎭᏢᏃ [[street|ᎦᎳᏅᏛ]]ᏯᏓᎢᏗᏏ ᏂᎦᏰᏙᎲ ᎤᏓᏍᏓᏲᎯᏎᏗ ᎠᏓᏁᎸ ᎯᎠ ᎤᏠᏱ ᎢᎦᎢ ᎨᏒ ᎤᎾᏥ. ᏱᏓᏟᎶᏍᏔᏅ ᎯᎳᎪ ᎢᏳ ᎤᎾᏥ ᎨᏒᎢ ᎤᎶᏒᏍᏔᏅ ᎾᎿ mountaintops ᎠᎴ undergoes ᎤᎳᏂᎩᏓ ᎦᏣᏄᎳ ᏧᎾᏍᏗ ᏄᏁᏌᏴᏢ : [[mudslide]], [[flash flood|ᎤᏥᏍᏓᎷᎩᏍᎬ ᎦᏃᎱᎩᏍᎬ]], ᎠᎴ [[Avalanche|ᎤᎶᏒᎩ]] ᏰᎵᏇ ᏄᎵᏍᏔᏅ, causing devastating ᎠᎹ ᎤᏲᏨᎯ.
+ᎤᎾᏥ ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎤᎦᎾᏭ insulator conserving ᎯᎠ ᎤᎦᎾᏭ ᎯᎠ ᎡᎶᎯ ᎠᎴ ᏄᎾᏰᎯᏍᏛᎾ ᏠᎨᏏ ᏓᏫᏒ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏴᏢ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ. ᎾᎯᏳᎢ ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎬᏂᎨᏒ ᏄᏍᏛᎢ snowfall ᏰᎵᏇ, ᎾᎾᎢ ᎢᏧᏩᎪᏗ, ᎢᏧᎳᎭ disrupt ᎯᎠ infrastructure ᎠᎴ ᎾᎾᏛᏁᎲ ᎤᏔᏂᏗ ᎦᏙᎯ Ꮎ ᎨᏒᎢ ᎣᎩᏌᏛ ᏯᏛᎿ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ. Automotive ᏓᏓᏅᏓᏁᎸ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏰᎵ ᎡᏆᏯ inhibited ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎧᏬᎳᏕᏍᎬ ᏰᎵ ᏂᎦᏛ. ᏄᏦᏍᏛᎾ infrastructures ᏯᏛᎿ ᏥᏄᏍᏗ [[electricity|ᎢᏳᏊ]], ᎠᎾᎦᎵᏍᎩ ᎠᏏᎳᏛ ᎤᎵᏍᏕᎸᏗ, ᎠᎴ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᎠᏓᏁᏗ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎠᏍᏚᏗ ᎡᎳᏗ. ᎪᎯ ᏰᎵᏇ ᎦᏂ "[[snow day|ᎤᎾᏥ ᎢᎦ]]", ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎢᎦ ᎾᎿ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏗᏕᎶᏆᏍᏗ ᎠᎴ ᏐᎢ ᎾᎾᏛᏁᎲ ᎠᎴ canceled ᎤᏍᏆᎸᎲ ᏂᎬᎢ ᎦᎨᏛ snowfall. ᎭᏫᎾᏗᏢ ᎡᏍᎦᏂ Ꮎ ᏄᎶᏒᏍᏛᎾ ᎤᎭ ᎤᏙᎯᏳ ᎤᏍᏗ ᎤᎾᏥ, ᎪᎯ ᎠᎾᏍᎬᏘ ᏄᎵᏍᏔᏅ ᎢᏧᎳᎭ ᎬᏙᏗ ᎠᏨᏍᏛ ᎤᏓᏂᏝᏅ, ᎪᎱᏍᏗ ᎢᏳᏓᎵᎭ ridiculed ᎾᎥᎢ ᎾᏍᎩ ᏴᏫ ᎣᎩᏌᏛ colder [[climate|ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ]], ᎭᏢᏃ [[street|ᎦᎳᏅᏛ]]ᏯᏓᎢᏗᏏ ᏂᎦᏰᏙᎲ ᎤᏓᏍᏓᏲᎯᏎᏗ ᎠᏓᏁᎸ ᎯᎠ ᎤᏠᏱ ᎢᎦᎢ ᎨᏒ ᎤᎾᏥ. ᏱᏓᏟᎶᏍᏔᏅ ᎯᎳᎪ ᎢᏳ ᎤᎾᏥ ᎨᏒᎢ ᎤᎶᏒᏍᏔᏅ ᎾᎿ mountaintops ᎠᎴ undergoes ᎤᎳᏂᎩᏓ ᎦᏣᏄᎳ ᏧᎾᏍᏗ ᏄᏁᏌᏴᏢ : [[mudslide]], [[flash flood|ᎤᏥᏍᏓᎷᎩᏍᎬ ᎦᏃᎱᎩᏍᎬ]], ᎠᎴ [[Avalanche|ᎤᎶᏒᎩ]] ᏰᎵᏇ ᏄᎵᏍᏔᏅ, causing devastating ᎠᎹ ᎤᏲᏨᎯ.
 
-ᎯᎠ ᏩᎦᎸᎳᏗᏴ seasonally cumulative ᏑᎾᎴᎢ ᎤᎾᏥ ᎢᏳᏊ ᎡᎷᏪᎢ ᏥᏄᏍᏛᎩ ᎾᎿ [[Mount Baker|ᎠᎩᎶᎯᏍᏗ Baker]], [[Washington]], [[U.S.A|Ꭴ..]] ᎾᎯᏳᎨᏒ ᎯᎠ [[1998]]–[[1999]] ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. [[Mount Baker|ᎠᎩᎶᎯᏍᏗ Baker]] ᎤᎩᏒᎩ ᎾᎪᎯᏳᎲᏍᎬᎾ 29 m ᎤᎾᏥ, ᎯᎠ ᎢᏴ ᎤᏂᎪᏗᏗ ᎯᎠ ᏧᏩᎫᏔᏅ ᎪᏪᎸ ᏧᏂᏴᎯ, [[Mount Rainier|ᎠᎩᎶᎯᏍᏗ Rainier]], [[Washington]], [[U.S.A|Ꭴ..]] ᎦᏙ ᎤᏍᏗ ᎾᎯᏳᎨᏒ ᎯᎠ [[1971]]–[[1972]] ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ ᎤᎩᏒᎩ 28.5 m ᎤᎾᏥ.
+ᎯᎠ ᏩᎦᎸᎳᏗᏴ seasonally cumulative ᏑᎾᎴᎢ ᎤᎾᏥ ᎢᏳᏊ ᎡᎷᏪᎢ ᏥᏄᏍᏛᎩ ᎾᎿ [[Mount Baker|ᎠᎩᎶᎯᏍᏗ Baker]], [[Washington]], [[U.S.A|ᎠᎹᏰᏟ]] ᎾᎯᏳᎨᏒ ᎯᎠ 1998–1999 ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. [[Mount Baker|ᎠᎩᎶᎯᏍᏗ Baker]] ᎤᎩᏒᎩ ᎾᎪᎯᏳᎲᏍᎬᎾ 29 m ᎤᎾᏥ, ᎯᎠ ᎢᏴ ᎤᏂᎪᏗᏗ ᎯᎠ ᏧᏩᎫᏔᏅ ᎪᏪᎸ ᏧᏂᏴᎯ, [[Mount Rainier|ᎠᎩᎶᎯᏍᏗ Rainier]], [[Washington]], [[U.S.A|Ꭴ..]] ᎦᏙ ᎤᏍᏗ ᎾᎯᏳᎨᏒ ᎯᎠ [[1971]]–[[1972]] ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ ᎤᎩᏒᎩ 28.5 m ᎤᎾᏥ.
 
 [[File:Snowfall_Luxembourg_train_station.JPG|thumb|right|250px|Snowfall ᎾᎾᎢ ᎯᎠ [[Luxembourg]] ᏔᎷᎩᏍᎩ ᏅᏃᎯ ᎤᎴᏫᏍᏗ.]]
 
-ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᎧᏃᎮᎭ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏠᏱᎭ ᎫᏝᎢ ᎬᏙᏗ ᎤᎾᏥ ᎭᏫᎾᏗᏢ ᏫᏚᏳᎪᏛ ᎪᎳ ᎠᏠᏯᏍᏛ [[Maine|ᎺᏂ]], [[New Hampshire|ᎠᏤ ᎭᎻᏒ]], [[Vermont|ᏣᏩᎦ]], [[ᎺᏌᏧᏎᏗ]] (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ [[Cape Cod|ᏂᎦᏛᎢ ᎠᏰᎵ]]), [[Rhode Island|ᎤᏍᏗ ᏧᎦᏚᏛᎢ]], [[ᎧᏁᏓᎦᏗ]], [[New York|ᏄᏯᎩ]] (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ [[Long Island|ᎦᏅᎯᏓ ᎠᎽᏰᎵ]]), [[Pennsylvania|ᎤᎩᏓᎵᏱ]], [[New Jersey|ᎠᏤ ᏨᏏ]], [[Michigan|ᎻᏏᎦᏂ]], ᎤᏴᏢ ᎢᏗᏢ [[Ohio|ᎣᎭᏲ]], ᎤᏴᏢ ᎢᏗᏢ [[Indiana|ᎢᏂᏗᏰᎾ]], ᎤᏴᏢ ᎢᏗᏢ [[Illinois|ᎢᎵᏃᏱ]], [[Wisconsin|ᏫᏍᎧᏂᏏᏂ]], [[Minnesota|ᎻᏂᏐᏓ]], [[Iowa|ᎠᏯᏩ]], [[North Dakota|ᏧᏴᎵ ᏓᏆᏓ]], [[South Dakota|ᎤᎦᎾᏭ ᏓᏆᏓ]], [[Montana|ᎹᎾᏖᎾ]], [[Wyoming|ᏩᏲᎻ]], ᏭᏕᎵᎬᏗᏢ [[Colorado|ᎧᎶᏩᏓ]] ᎠᎴ ᎯᎠ [[Front Range|ᎢᎬᏱᏗᏢ ᎠᏍᏓᏅᏅ]], [[Idaho|ᎠᏓᎰ]], ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎧᎸᎬᎢᏗᏢ [[Utah|ᏳᏔ]], ᎤᏴᏢ ᎢᏗᏢ [[Nevada]], ᎠᎴ ᎦᎸᎳᏗ-ᏂᎦᏛᎢ ᎡᏍᎦᏂ [[ᏩᏏᏓᏂ]], [[Oregon]], [[California]], [[Arizona]], [[ᏍᏆᏂᏤᏍᏛᎢ]], [[Maryland]], [[West Virginia|ᏭᏕᎵᎬ Virginia]], ᎠᎴ [[Virginia]], ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᎧᏲᏗ ᎡᏍᎦᏂ ᎣᏍᏛ ᎧᎸᎬ ᎯᎠ Rockies ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ Montana ᎠᎴ Wyoming ᎠᎴ ᎯᎠ ᏭᏕᎵᎬᏗᏢ Dakotas (ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ [[High Plains (United States)|ᎦᎸᎳᏗ ᏂᎬᏅ]]) ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏓᎵᎭ snowless. ᎾᎥᏂᎨᏍᏙᏗ ᎧᏃᎮᎭ ᎠᎴ ᎦᎸᎳᏗ-ᏂᎦᏛᎢ ᎡᏍᎦᏂ ᎭᏫᎾᏗᏢ ᏐᎢ ᎧᏃᎮᎭ ᎾᏍᎩ ᎾᏍᏇ ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏓᎵᎭ ᎫᏝᎢ ᎬᏙᏗ ᎤᎾᏥ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎧᏃᎮᎭ ᎤᏗᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᎾᎾᎢ ᎡᎳᏗᎨ ᏂᎦᏛᎢ, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎤᎾᏥ ᎾᏍᎩᎾᎢ ᎢᎦ ᎠᎴ ᎤᏠᏱᎭ ᎠᎦᏲᎳᏗᏍᏗ ᎭᏫᏂᏗᏢ ᏑᎾᏙᏓᏆᏍᏗ. [[Canada]] ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎧᎵᏬᎯ ᎫᏝᎢ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎡᎷᏪᎢ ᎡᏍᎦᏂ ᏴᏩᎤᏫᏛ [[Vancouver, British Columbia|Vancouver, ᎩᎵᏏ Columbia]], ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎤᎦᎾᏭ ᎢᏗᏢ [[Alberta]] ᎠᎴ ᎢᏅ ᎤᎦᎾᏭ ᎢᏗᏢ [[Ontario]]. [[Alaska]] ᎨᏒᎢ ᎾᏍᎩᏯᎢᎨᏙᏗ ᎫᏝᎢ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎦᏙᎯ ᎡᏍᎦᏂ ᎠᎴ ᎯᎸᏍᎩ ᎠᎹᏰᎵ, ᎾᎯᏳᎢ ᎤᎾᏥ ᎭᏫᎾᏗᏢ [[Hawaii|ᎭᏩᏱ]] ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᎤᎩᏒᎩ ᎾᎿ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏫᎪᏍᏓᏴ (ᎦᎸᎳᏗᏢ ᎬᏩᏚᏫᏛ 2700 m).
+ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᎧᏃᎮᎭ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏠᏱᎭ ᎫᏝᎢ ᎬᏙᏗ ᎤᎾᏥ ᎭᏫᎾᏗᏢ ᏫᏚᏳᎪᏛ ᎪᎳ ᎠᏠᏯᏍᏛ [[Maine|ᎺᏂ]], [[New Hampshire|ᎠᏤ ᎭᎻᏒ]], [[Vermont|ᏣᏩᎦ]], [[Massachusetts|ᎺᏌᏧᏎᏗ]] (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ [[Cape Cod|ᏂᎦᏛᎢ ᎠᏰᎵ]]), [[Rhode Island|ᎤᏍᏗ ᏧᎦᏚᏛᎢ]], [[Connecticut|ᎧᏁᏓᎦᏗ]], [[New York|ᏄᏯᎩ]] (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ [[Long Island|ᎦᏅᎯᏓ ᎠᎽᏰᎵ]]), [[Pennsylvania|ᎤᎩᏓᎵᏱ]], [[New Jersey|ᎠᏤ ᏨᏏ]], [[Michigan|ᎻᏏᎦᏂ]], ᎤᏴᏢ ᎢᏗᏢ [[Ohio|ᎣᎭᏲ]], ᎤᏴᏢ ᎢᏗᏢ [[Indiana|ᎢᏂᏗᏰᎾ]], ᎤᏴᏢ ᎢᏗᏢ [[Illinois|ᎢᎵᏃᏱ]], [[Wisconsin|ᏫᏍᎧᏂᏏᏂ]], [[Minnesota|ᎻᏂᏐᏓ]], [[Iowa|ᎠᏯᏩ]], [[North Dakota|ᏧᏴᎵ ᏓᏆᏓ]], [[South Dakota|ᎤᎦᎾᏭ ᏓᏆᏓ]], [[Montana|ᎹᎾᏖᎾ]], [[Wyoming|ᏩᏲᎻ]], ᏭᏕᎵᎬᏗᏢ [[Colorado|ᎧᎶᏩᏓ]] ᎠᎴ ᎯᎠ [[Front Range|ᎢᎬᏱᏗᏢ ᎠᏍᏓᏅᏅ]], [[Idaho|ᎠᏓᎰ]], ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎧᎸᎬᎢᏗᏢ [[Utah|ᏳᏔ]], ᎤᏴᏢ ᎢᏗᏢ [[Nevada|ᏁᏩᏓ]], ᎠᎴ ᎦᎸᎳᏗ-ᏂᎦᏛᎢ ᎡᏍᎦᏂ [[ᏩᏏᏓᏂ]], [[Oregon|ᎤᏩᎦᏂ]], [[California|ᎠᏕᎳᏧᏢᎢ]], [[Arizona|ᎡᏩᏐᎾ]], [[New Mexico|ᏍᏆᏂᏤᏍᏛᎢ]], [[Maryland|ᎺᎵᏂ]], [[West Virginia|ᏭᏕᎵᎬ ᏩᏥᏂ]], ᎠᎴ [[Virginia|ᏩᏥᏂ]], ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᎧᏲᏗ ᎡᏍᎦᏂ ᎣᏍᏛ ᎧᎸᎬ ᎯᎠ Rockies ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ [[Montana|ᎹᎾᏖᎾ]] ᎠᎴ Wyoming ᎠᎴ ᎯᎠ ᏭᏕᎵᎬᏗᏢ [[North Dakota|ᏧᏴᎵ ᏓᏆᏓ]] ᎠᎴ [[South Dakota|ᎤᎦᎾᏭ ᏓᏆᏓ]] (ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ [[High Plains (United States)|ᎦᎸᎳᏗ ᏂᎬᏅ]]) ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏓᎵᎭ snowless. ᎾᎥᏂᎨᏍᏙᏗ ᎧᏃᎮᎭ ᎠᎴ ᎦᎸᎳᏗ-ᏂᎦᏛᎢ ᎡᏍᎦᏂ ᎭᏫᎾᏗᏢ ᏐᎢ ᎧᏃᎮᎭ ᎾᏍᎩ ᎾᏍᏇ ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏓᎵᎭ ᎫᏝᎢ ᎬᏙᏗ ᎤᎾᏥ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎧᏃᎮᎭ ᎤᏗᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᎾᎾᎢ ᎡᎳᏗᎨ ᏂᎦᏛᎢ, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎤᎾᏥ ᎾᏍᎩᎾᎢ ᎢᎦ ᎠᎴ ᎤᏠᏱᎭ ᎠᎦᏲᎳᏗᏍᏗ ᎭᏫᏂᏗᏢ ᏑᎾᏙᏓᏆᏍᏗ. [[Canada|ᎨᎾᏓ]] ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎧᎵᏬᎯ ᎫᏝᎢ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎡᎷᏪᎢ ᎡᏍᎦᏂ ᏴᏩᏚᏫᏛ [[Vancouver, British Columbia|Vancouver, ᎩᎵᏏ Columbia]], ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎤᎦᎾᏭ ᎢᏗᏢ [[Alberta]] ᎠᎴ ᎢᏅ ᎤᎦᎾᏭ ᎢᏗᏢ [[Ontario]]. [[Alaska|ᎠᎳᏍᎦ]] ᎨᏒᎢ ᎾᏍᎩᏯᎢᎨᏙᏗ ᎫᏝᎢ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎦᏙᎯ ᎡᏍᎦᏂ ᎠᎴ ᎯᎸᏍᎩ ᎠᎹᏰᎵ, ᎾᎯᏳᎢ ᎤᎾᏥ ᎭᏫᎾᏗᏢ [[Hawaii|ᎭᏩᏱ]] ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᎤᎩᏒᎩ ᎾᎿ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏫᎪᏍᏓᏴ (ᎦᎸᎳᏗᏢ ᎬᏩᏚᏫᏛ 2700 m).
 
 == ᏗᏎᏍᏗ ᏓᏍᏓᏅᏅ ==
 [[File:SnowflakesWilsonBentley.jpg|thumb|left|ᎤᎾᏥ ᏫᏚᏳᎪᏛ ᎾᎥᎢ [[Wilson Bentley]], 1902]]
-[[File:Tsuzumi snow crystal.jpg|thumb|right|ᎯᎠ "Japanese Tsuzumi" ᎨᏒᎢ ᏓᎦᏘᎴᎬ ᏧᏓᎴᎿᎢ ᎤᎾᏥ ᎤᏓᏅᏖᏗ, ᎠᎩᏍᎬᎢ Ꮝ ᏚᏙᎥ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᏳ ᎢᎪᎯ-ᏓᏍᏓᏅᏅ ᏚᎷᏨ [[tsuzumi]] ᎠᎱᎵ.]]
+[[File:Tsuzumi snow crystal.jpg|thumb|right|ᎯᎠ "ᏣᏩᏂᏏ Tsuzumi" ᎨᏒᎢ ᏓᎦᏘᎴᎬ ᏧᏓᎴᎿᎢ ᎤᎾᏥ ᎤᏓᏅᏖᏗ, ᎠᎩᏍᎬᎢ Ꮝ ᏚᏙᎥ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᏳ ᎢᎪᎯ-ᏓᏍᏓᏅᏅ ᏚᎷᏨ [[tsuzumi]] ᎠᎱᎵ.]]
 ᎤᏴᏢ ᏂᎪᎯᎸᎢ ᎤᎭ ᏑᏓᎵ ᎤᎵᏍᏕᎸᏗ ᎢᏗᎦᏘᎭ, ᎦᏙ ᎤᏍᏗ ᏗᎶᏗ ᏂᏛᎴᏅᏓ ᎯᎠ hexagonal [[crystal structure|ᎤᏓᏅᏖᏗ ᎠᏛᎯᏍᏙᏗ]] ᏧᏣᏔᏊ [[ice|ᎤᏁᏍᏓᎳ]] (ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[Ice Ih|ᎤᏁᏍᏓᎳ ᎠᏯ<ᎠᏂᎦᏲᎵ>h</ᎠᏂᎦᏲᎵ>]]) ᎨᎳᏛᏍᏗ Ꮝ 'basal' ᎦᏃᎯᎵᏙ. 
 
 ᎾᎿᎢ ᎠᎴ, ᎠᏯᏖᎾ, ᏔᎵ ᏰᎵᏊ ᏗᎪᏏᏌᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏗᎦᏘᎭ ᎤᏴᏢ. ᎢᎬᏱ, ᎾᎿᎢ ᏰᎵᏇ ᎾᏍᏋ ᏗᏛᎪᏔᏅ ᎠᎴ ᎠᏓᏃᎯᏎᏗ ᏫᏓᏲᎯᏍᏗ ᎠᏰᎵ ᎯᎠ ᏗᏂᏃᎨᏂ, ᏯᏛᎿ Ꮎ ᎤᏛᏏᏗᏒ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎧᏃᎨᏂ ᎦᎸᏉᏙᏗ ᎯᎠ ᎤᏛᏏᏗᏒ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎧᏃᎨᏂ. [[Surface tension|ᎦᏚᎢ ᏄᎵᏂᎬᎬ]] ᎠᎴ [[phonons]] ᎠᎴ ᏄᎾᏛᏅ ᎯᎠ ᏫᎦᎶᎯᏍᏗ Ꮎ ᏯᏛᎿ ᏗᏛᎪᏔᏅ ᏰᎵᏇ ᏄᎵᏍᏔᏅ. ᎯᎠ ᏐᎢ ᏗᎪᏏᏌᏅ, ᎦᏙ ᎤᏍᏗ ᎦᎾᏄᎪᎦ ᎾᏍᏋ ᎯᎠ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᏗᎧᏃᏗᎢ, ᎨᏒᎢ Ꮎ ᎯᎠ ᏗᏂᏃᎨᏂ ᎤᏴᏢ ᎠᏛᏍᎬ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎭᏫᎾᏗᏢ ᏄᏍᏗᏓᏅ Ꮎ ᎨᏒᎢ ᎤᏬᎯᏳᏅ ᎾᏍᏋ ᎤᎵᏍᏓᎯᎨ ᏧᏓᎴᎾᎯ ᎭᏫᎾᏗᏢ ᏄᏁᏌᏴᏢ, ᎤᎯᏌᏛ ᎠᎴ ᏐᎢ ᎤᏃᎴ ᏄᏍᏗᏓᏅ. ᎪᎯ ᏄᏍᏗᏓᏅ ᎨᏒᎢ ᎤᏬᎯᏳᏅ ᎾᏍᏋ ᏗᎦᏃᏢᎩ spatially ᏗᏙᎳᎩ ᎾᎿ ᎯᎠ ᏗᎦᏛᏗ ᏏᏴᏫ ᏫᏚᏳᎪᏛ, ᏓᏓᏘᏂᏒ ᎯᎠ ᏗᏂᏃᎨᏂ ᎠᏛᏏᏒ ᎦᎸᎳᏗ ᎤᏩᎾᏕᏍᎩ ᎠᎪᏩᏛᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎾᎥᎢ ᎦᏬᎯᎵᏴᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏠᏱ ᏫᎦᎶᎯᏍᏗ ᎤᏠᏱ ᏄᏍᏗᏓᏅ, ᎤᏣᏘ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏠᏱ ᎦᎶᎯᏍᏗ Ꮎ ᎬᏙᏗ ᏕᏡᎬ ᎦᏬᎯᎵᏴᏍᏗ environmental ᏗᎦᏁᏟᏴᏍᏗ ᎾᎥᎢ ᎠᏛᏏᏒ ᎾᎥᏂᎨ-ᎤᏠᏱ ᏗᏫᏒᏗ [[tree ring|ᏡᎬ ᎠᎵᏰᏑᏍᏔᏬ]]. ᎯᎠ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏍᏗᏓᏅ ᎭᏫᎾᏗᏢ ᏄᏓᎨᏒ ᎡᏆᎯᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎤᏴᏢ ᏫᏚᏳᎪᏛ ᎯᎠ ᎠᎦᏎᏍᏔᏅ ᎦᎷᎶᎩ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏰᎵ ᎯᎠ ᎦᎶᏄᎮᏛ ᏄᏓᎴᎿᎥ ᎤᏴᏢ.
@@ -49,23 +49,22 @@ Image:Snowflake 300um LTSEM, 13368.jpg
 *ᎤᎪᏗᏗ [[winter sport|ᎪᎳ ᏗᎾᏁᎶᎲᏍᎩ]], ᏯᏛᎿ ᏥᏄᏍᏗ [[skiing|ᎤᏍᏗ ᏓᏆᎴᎷ]], [[snowmobiling]], [[snowshoe]]ᎪᎯᏳᏙᏗ ᎠᎴ [[snowboarding]]
 *ᏓᎾᏁᎶᎲᏍᎬ ᎬᏙᏗ [[sled|ᏗᏓᎾᏏᏁᎩ]] ᎠᎴ ᎠᎩᎸᎥᏍᎬ ᎭᏫᎾᏗᏢ [[sleigh|ᎤᏍᏗ ᏓᏆᎴᎷ]]
 *ᎠᏓᏁᎸ [[snowman]] (ᎠᎴ 'snowwoman') ᎠᎴ [[snow fort|ᎤᎾᏥ ᏗᏐᏴ]]
-*ᏭᎾᏕᎬᎢ ᎤᏓᏂᏝᏅ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎭᏫᎾᏗᏢ [[snowball fight|ᎤᏓᏂᏝᏅ ᎠᎳᏍᏗ]] ᎠᎴ ᎾᎾᎢ ᎠᏂᏐᎢ [[tease|ᎠᏓᏕᏲᏙᏗ]] ᎠᏂ. ([[Humans|ᎠᏂᏴᏫ]] ᎢᎦᏰᎵᏍᏗ ᎾᏍᏋ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᎠᎴᏂᏙᎲ Ꮎ ᏩᏗᏅᏗ ᎤᎾᏤᎵ ᎤᏓᏂᏝᏅ. [[Bonobo|Pygmy chimpanzees]] ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏅᏛ ᎠᏫᏛᏗ ᎤᏓᏂᏝᏅ ᏴᏩᎤᏫᏛ , ᎠᎴ ᎥᏝ ᏩᏗᏅᏗ ᎠᏂ.)
+*ᏭᎾᏕᎬᎢ ᎤᏓᏂᏝᏅ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎭᏫᎾᏗᏢ [[snowball fight|ᎤᏓᏂᏝᏅ ᎠᎳᏍᏗ]] ᎠᎴ ᎾᎾᎢ ᎠᏂᏐᎢ [[tease|ᎠᏓᏕᏲᏙᏗ]] ᎠᏂ. ([[Humans|ᎠᏂᏴᏫ]] ᎢᎦᏰᎵᏍᏗ ᎾᏍᏋ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᎠᎴᏂᏙᎲ Ꮎ ᏩᏗᏅᏗ ᎤᎾᏤᎵ ᎤᏓᏂᏝᏅ. [[Bonobo|Pygmy chimpanzees]] ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏅᏛ ᎠᏫᏛᏗ ᎤᏓᏂᏝᏅ ᏴᏩᏚᏫᏛ, ᎠᎴ ᎥᏝ ᏩᏗᏅᏗ ᎠᏂ.)
 *ᎠᏃᏢᏍᎬ [[snow angel|ᎤᎾᏥ ᎠᏂᏓᏪᎯ]]
-ᎭᏢᏃ ᎤᎾᏥ ᎨᏒᎢ ᎧᏂᎬᎩ ᎠᎴ ᎯᎠ ᏄᏁᏌᏴᏢ ᎨᏒᎢ ᎡᎳᏗ ᏰᎵᏊ, [[snow cannon|ᎤᎾᏥ ᎦᎶᏇ ᎡᏆ]]ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎬᏔᏅᎯ ᎠᏛᎯᏍᏙᏗ eligwa igai ᎢᎦᎢ ᎨᏒ ᎾᏍᎩᎾᎢ ᏯᏛᎿ ᏗᏁᎸᏗᏱ.
+ᎭᏢᏃ ᎤᎾᏥ ᎨᏒᎢ ᎧᏂᎬᎩ ᎠᎴ ᎯᎠ ᏄᏁᏌᏴᏢ ᎨᏒᎢ ᎡᎳᏗ ᏰᎵᏊ, [[snow cannon|ᎤᎾᏥ ᎦᎶᏇ ᎡᏆ]]ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎬᏔᏅᎯ ᎠᏛᎯᏍᏙᏗ ᎡᎵᏆ ᎢᎦᎢ ᎢᎦᎢ ᎨᏒ ᎾᏍᎩᎾᎢ ᏯᏛᎿ ᏗᏁᎸᏗᏱ.
 
 ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᏭᏔᏅ snowcastle ᎨᏒᎢ ᎤᏁᏍᎨᎲ ᎭᏫᎾᏗᏢ [[Kemi]], [[Finland]], ᏂᎦᎥᎢ ᎪᎳ.
 
 == ᎠᏫᏒᏗ ==
-ᎯᎠ '''ᎠᎹ ᎢᏗᎦᏘᎭ''' ᎤᎾᏥ ᎦᏇᏅᏗ ᎨᏒᎢ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎹ Ꮎ ᎾᏍᎩ ᎢᎦᎢ ᎨᏐ, ᎾᎪᎲᎾ Ꮝ ᎤᏒᏙᏂ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎢᏳᏃ ᎯᎠ ᎤᎾᏥ ᎫᏢᎥᏍᎬ ᎠᏓᏁᎸ ᎡᏍᎦᏂ ᎤᎭ ᎠᎹ ᎢᏗᎦᏘᎭ 5 m, ᎾᎯᏳᎢ ᎾᏍᎩ ᏫᎵ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎾᎯ ᎦᏁᎲ ᎠᎹ 5 m ᎠᏍᏛᎩ ᎫᏢᎥᏍᎬ ᎯᎠ ᎤᏠᏱ ᎡᏍᎦᏂ. ᎪᎯ ᎨᏒᎢ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏓ ᎠᏓᏃᎮᏗ [[hydrologist]]ᎬᎾᏬᏍᎬ ᎤᎾᏥ ''ᎤᏒᏙᏂ'', ᏥᏄᏍᏗ ᎯᎠ ᎠᏫᏒᏗ ᎢᏧᎳᎭ ᎢᏤᎢ ᎤᎶᏒᎢ ᎤᎾᏥ ᏂᎬᎢ varies. ᎢᏤ ᎤᎾᏥ ᎢᏳᏓᎵᎭ ᎤᎭ ᎠᏫᏒᏗ ᏴᏩᎤᏫᏛ 12% ᎠᎹ, ᎠᎴ ᎢᏧᎳᎭ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᏄᏍᏗᏓᏅ, ᎯᎠ ᎤᏠᏱ ᎤᎾᏥ ᏫᎵ ᎠᏓᏁᎳᏅᎯ ᎭᏫᎾᏗᏢ Ꮝ ᎣᏤᎵ ᏄᏓᎨᏒ iyuwakodi ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 33% ᎠᎹ. ᎤᏟ ᎢᎦᎢ ᎤᎾᏥ ᎾᎿ ᎦᏚᎢ ᎪᎯ ᏫᎵ ᎠᎦᏲᎳᏗᏍᏗ ᎾᏍᎩ ᎢᏧᎳᎭ ᎤᏗᏗᏢ. ᎾᎥᎢ ᎣᏂᏱᏳ ᎠᎹ ᎦᏄᎪᎬ, ᎤᎾᏥ densities ᎢᏳᏓᎵᎭ ᎦᎶᏒᏍᏔᏅ 50% ᎠᎹ [http://cdec.water.ca.gov/snow/misc/density.html].
+ᎯᎠ '''ᎠᎹ ᎢᏗᎦᏘᎭ''' ᎤᎾᏥ ᎦᏇᏅᏗ ᎨᏒᎢ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎹ Ꮎ ᎾᏍᎩ ᎢᎦᎢ ᎨᏐ, ᎾᎪᎲᎾ Ꮝ ᎤᏒᏙᏂ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎢᏳᏃ ᎯᎠ ᎤᎾᏥ ᎫᏢᎥᏍᎬ ᎠᏓᏁᎸ ᎡᏍᎦᏂ ᎤᎭ ᎠᎹ ᎢᏗᎦᏘᎭ 5 m, ᎾᎯᏳᎢ ᎾᏍᎩ ᏫᎵ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎾᎯ ᎦᏁᎲ ᎠᎹ 5 m ᎠᏍᏛᎩ ᎫᏢᎥᏍᎬ ᎯᎠ ᎤᏠᏱ ᎡᏍᎦᏂ. ᎪᎯ ᎨᏒᎢ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏓ ᎠᏓᏃᎮᏗ [[hydrologist]]ᎬᎾᏬᏍᎬ ᎤᎾᏥ ''ᎤᏒᏙᏂ'', ᏥᏄᏍᏗ ᎯᎠ ᎠᏫᏒᏗ ᎢᏧᎳᎭ ᎢᏤᎢ ᎤᎶᏒᎢ ᎤᎾᏥ ᏂᎬᎢ varies. ᎢᏤ ᎤᎾᏥ ᎢᏳᏓᎵᎭ ᎤᎭ ᎠᏫᏒᏗ ᏴᏩᏚᏫᏛ 12% ᎠᎹ, ᎠᎴ ᎢᏧᎳᎭ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᏄᏍᏗᏓᏅ, ᎯᎠ ᎤᏠᏱ ᎤᎾᏥ ᏫᎵ ᎠᏓᏁᎳᏅᎯ ᎭᏫᎾᏗᏢ Ꮝ ᎣᏤᎵ ᏄᏓᎨᏒ ᎢᏳᏩᎪᏗ ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 33% ᎠᎹ. ᎤᏟ ᎢᎦᎢ ᎤᎾᏥ ᎾᎿ ᎦᏚᎢ ᎪᎯ ᏫᎵ ᎠᎦᏲᎳᏗᏍᏗ ᎾᏍᎩ ᎢᏧᎳᎭ ᎤᏗᏗᏢ. ᎾᎥᎢ ᎣᏂᏱᏳ ᎠᎹ ᎦᏄᎪᎬ, ᎤᎾᏥ densities ᎢᏳᏓᎵᎭ ᎦᎶᏒᏍᏔᏅ 50% ᎠᎹ [http://cdec.water.ca.gov/snow/misc/density.html].
 
-ᎠᎹ ᎢᏗᎦᏘᎭ ᎨᏒᎢ ᎡᏆ ᎤᏁᏉᏨ ᎠᎹ ᎠᏓᏅᏖᎵᏙᎯ ᎣᏚᎵᏍᎬ ᎤᎤᎩ ᎬᏒ ᎠᎹ ᎦᏄᎪᎬ [[runoff]] ᎠᎴ ᎯᎠ [[water supply|ᎠᎹ ᎠᏓᏁᏗ]] ᏕᎦᏚᎲ ᎨᎢ. ᏗᏟᎶᏛ ᎠᎴ ᎪᏢᏅᎯ ᏦᏬᏰᏂ ᎬᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᎾᎢ ᎪᏪᎳᏅᎯ ᎦᎷᎯᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ''ᎤᎾᏥ ᏫᏂᏚᏳᎪᏛ'', ᎠᎴ ᏄᏩᏓᎴ ᎬᏗᏍᎬᎢ ᎤᏤᎵᏛ ᏄᏓᎨᏒ ᎤᏯᏅᎲ ''ᎤᎾᏥ ᎠᏆᏍᏙ''.
+ᎠᎹ ᎢᏗᎦᏘᎭ ᎨᏒᎢ ᎡᏆ ᎤᏁᏉᏨ ᎠᎹ ᎠᏓᏅᏖᎵᏙᎯ ᎣᏚᎵᏍᎬ ᎤᏚᎩ ᎬᏒ ᎠᎹ ᎦᏄᎪᎬ [[runoff]] ᎠᎴ ᎯᎠ [[water supply|ᎠᎹ ᎠᏓᏁᏗ]] ᏕᎦᏚᎲ ᎨᎢ. ᏗᏟᎶᏛ ᎠᎴ ᎪᏢᏅᎯ ᏦᏬᏰᏂ ᎬᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᎾᎢ ᎪᏪᎳᏅᎯ ᎦᎷᎯᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ''ᎤᎾᏥ ᏫᏂᏚᏳᎪᏛ'', ᎠᎴ ᏄᏩᏓᎴ ᎬᏗᏍᎬᎢ ᎤᏤᎵᏛ ᏄᏓᎨᏒ ᎤᏯᏅᎲ ''ᎤᎾᏥ ᎠᏆᏍᏙ''.
 
 == ᎢᏗᎦᎪᏘ ==
-[[File:Snjeg.jpg|thumb|left|ᎪᎳ ᎭᏫᎾᏗᏢ Croatia]]
 [[File:Skiing Christmas '05 034.jpg|thumb|200px| ᎠᏍᏚᏗ-ᎦᎸᎳᏗᏢ ᏗᎧᏃᏗᎢ ᎤᎾᏥ ᎤᏓᏅᏖᏗ]]
 [[File:May 28 2006 Snowbird UT USA.jpg|thumb|300px|right|[[Snowbird ski resort|Snowbird ᎤᏍᏗ ᏓᏆᎴᎷ ᏴᏫ ᎤᏁᏓᏍᏗ]], ᏌᏊ ᎯᎠ snowiest ᏚᏙᏢᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ Ꭴ..]]
 ;[[Ice|ᎤᏁᏍᏓᎳ]]
-: ᎠᏫᏒᏗ, ᎦᏇᏅᏅᎯ ᏭᏚᎸᏛ ᎬᏙᏗ ᎪᏢᎯ ᎢᎪᏢᎯ ᎢᏁᎸᎯ ᏂᏛᎴᏅᏓ ᎤᎾᏥ Ꮎ doesn't ᎢᎦᎢ ᎨᏒ ᎤᏃᎴ ᎥᏝ ᎪᎱᏍᏗ. ᎥᎵᏍᎦᏍᏙᏗᏍᎬ ᎾᎿ ᎯᎠ ᎤᎾᏥ ᎤᏓᏂᏝᏅ ᏓᎬᏩᎶᏛ, ᎯᎠ ᎤᏃᎴ ᏄᏁᏌᏴᏢ, ᎠᎴ ᎯᎠ ᏄᏓᎨᏒ ᎯᎠ ᎤᎾᏥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᎳᏗᏢ ᏫᏚᏳᎪᏛ, ᎾᏍᎩ ᏰᎵᏇ ᎠᎩᏍᏗ ᎤᎾᏥ ᎦᏲᎵ ᎢᏧᏟᎶᏛ ᎠᎴ ᎦᏲᎵ ᎯᏍᎩ ᎤᏙᏢᏒ ᎾᎾᎯ ᎤᏁᏍᏓᎳ.
+: ᎠᏫᏒᏗ, ᎦᏇᏅᏅᎯ ᏭᏚᎸᏛ ᎬᏙᏗ ᎪᏢᎯ ᎢᎬᏁᎸᎯ ᏂᏛᎴᏅᏓ ᎤᎾᏥ Ꮎ doesn't ᎢᎦᎢ ᎨᏒ ᎤᏃᎴ ᎥᏝ ᎪᎱᏍᏗ. ᎥᎵᏍᎦᏍᏙᏗᏍᎬ ᎾᎿ ᎯᎠ ᎤᎾᏥ ᎤᏓᏂᏝᏅ ᏓᎬᏩᎶᏛ, ᎯᎠ ᎤᏃᎴ ᏄᏁᏌᏴᏢ, ᎠᎴ ᎯᎠ ᏄᏓᎨᏒ ᎯᎠ ᎤᎾᏥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᎳᏗᏢ ᏫᏚᏳᎪᏛ, ᎾᏍᎩ ᏰᎵᏇ ᎠᎩᏍᏗ ᎤᎾᏥ ᎦᏲᎵ ᎢᏧᏟᎶᏛ ᎠᎴ ᎦᏲᎵ ᎯᏍᎩ ᎤᏙᏢᏒ ᎾᎾᎯ ᎤᏁᏍᏓᎳ.
 ;ᏎᎷ
 : ᎤᏃᎮᎾ, ᎢᎦᎢ ᎦᏚᎵᏓ ᎤᎾᏥ. ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎾᎥᎢ skiers ᏄᏍᏛ ᎠᏂᏃᎮᏍᎬ ᎣᏍᏛ ᎠᎹ ᎦᏄᎪᎬ ᎤᎾᏥ. ᏎᎷ ᎨᏒᎢ ᎯᎠ ᏄᎵᏍᏔᏅ ᎠᏓᏠᎯᏍᏗ ᎠᏓᏠᎯᏍᏗ ᎤᎦᎾᏭ ᎠᎴ refreezing. 
 ;ᎤᎾᏥ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ (Thundersnow)
@@ -105,8 +104,7 @@ Image:Snowflake 300um LTSEM, 13368.jpg
 ;[[Watermelon snow|ᎬᎩᏍᏗ ᎤᎾᏥ]]
 :ᎩᎦᎨ/ᎩᎦᎨ ᎢᏳᏍᏗ ᎠᏑᏫᏒ ᎤᎾᏥ Ꮎ ᎦᏩᏒᎬ ᎾᏍᎩᏯᎢ [[watermelon|ᎬᎩᏍᏗ]], ᎠᎴ ᎨᏒᎢ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎩᎦᎨ ᎠᏑᏫᏒ [[green alga|ᎢᏤ ᎢᏳᏍᏗ alga]] ᎤᏯᏅᎲ ''[[chlamydomonas nivalis]]''
 
-== ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-{{sisterlinks|Snow}}
+== ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ ==
 *[[Avalanche|ᎤᎶᏒᎩ]]
 *[[Sleigh|ᎤᏍᏗ ᏓᏆᎴᎷ]]
 *[[Skiing|ᎤᏍᏗ ᏓᏆᎴᎷ]]
@@ -124,15 +122,11 @@ Image:Snowflake 300um LTSEM, 13368.jpg
 *[[List of countries receiving snowfall|ᏙᎪᏩᎸ  ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎠᎩᏍᎬᎢ snowfall]]
 *[[Eskimo words for snow|ᏧᏴᏢ ᎠᏁᎯ ᏴᏫ ᎤᏂᏁᏨ ᎾᏍᎩᎾᎢ ᎤᎾᏥ]]
 
-=== Media ===
-{{Video|filename=Snowing.ogg|title=Snowing|description=The video depicts snowfall in a residential neighborhood|format=[[Ogg]]}}
-
-== ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
+== ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 *[ftp://198.77.171.17/pub/High%20resolution%20TIFF%20Snow%20Images%20from%20webpage Ultra-high resolution images] ᎤᏴᏢ. ᏂᎦᏛ ᎾᏍᎩᏯᎢ ᎠᎴ ᏴᏫ ᎤᏁᏓᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.
 *[http://www.richardjwild.co.uk Dr Richard Wild - Heavy Snow, Blizzards, Snowstorms and Snowfall Site] Online ᎣᏪᏅᏒ ᏗᏕᎶᏆᏍᎩ Richard ᎨᏯᏔᎯ. ᏄᏍᏗᏓᏅ ᎠᏠᏯᏍᏗ ᎧᏃᎮᏍᎩ ᎠᎴ ᏗᏤᎢ ᎦᎨᏛ ᎤᎾᏥ, ᎤᏴᏝ ᎦᏃᎸᏍᎬ, snowstorms, ᎤᎾᏥ ᏗᏓᏟᎶᏍᏔᏅ, ᎤᎾᏥ ᎾᎯᏳ ᎢᎪᎯ ᎠᎴ ᏐᎢ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ snowfalls ᎠᎴ ᎤᏴᏝ ᎦᏃᎸᏍᎬ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎢᏳᏍᏗ ᎧᏃᎮᏗ.
 * [http://www.nsdl.arm.gov/Library/glossary.shtml#snowflake National Science Digital Library - Snowflake]
 * [http://www.its.caltech.edu/~atomic/snowcrystals/faqs/faqs.htm Kenneth G. Libbrecht's Snowflake FAQ]
-* http://www.Ꮝ.caltech.edu/~ᎠᏍᏓᏩᏛᏍᏗ/snowcrystals/ᏗᏟᎶᏍᏔᏅ/ᏗᏟᎶᏍᏔᏅ.htm
 * [http://www.sciencebits.com/SnowAboveFreezing On snow at above freezing temperatures]
 
 [[Category:ᎠᎹ]]
